--- a/text/挑战.md
+++ b/text/挑战.md
@@ -7,6 +7,11 @@ https://www.zhihu.com/question/277548089/answer/1902070390467036143
 
 上帝不会掷骰子，不要告诉上帝怎么做。
 
+题主的疑问可能在于，直觉上感觉：“我每次抽样， X的值在变，那么它的分布（律）不是在变了吗？”
+
+无生命的物质分布律是不变的，有生命的物质是在变的，比如掷骰子每一面的概率是1/6这是不变的，所以骰子是无生命的。
+至于有生命和无生命的区别界限在哪里我还没想清楚，我认为不是化学上那种有机和无机的区别。
+
 ------
 决定是否为民科的应该是心态吧? - Yuhang Liu的回答 <br>
 https://www.zhihu.com/question/1901693164693230607/answer/1901992557875040324
