--- a/text/挑战.md
+++ b/text/挑战.md
@@ -2,7 +2,7 @@
 
 最新 5.3：
 
-现在有24个分支条件需要处理，如果用switch需要写24个case的代码，而且每个case里面要处理的逻辑可能搞混，但如果分成2*3*4种情况处理，也是24个分支，但是代码只需要写2+3+4=9种case
+现在有24个分支条件需要处理，如果用switch需要写24个case的代码，而且每个case里面要处理的逻辑可能搞混，但如果分成2\*3\*4种情况处理，也是24个分支，但是代码只需要写2+3+4=9种case
 
 -----
 随机变量的分布函数是不是也是一个随机变量？ - 范函子Skyline的回答 <br>
