--- a/text/挑战.md
+++ b/text/挑战.md
@@ -2,6 +2,9 @@
 
 最新 5.3：
 
+你们研究的东西都特别复杂，我是一点都看不懂。我写的东西都很简单，你们很容易就能看懂，但你们就是注意不到，就算看到了也不会当回事，你们判断一个东西有没有价值和我的差距太大了，这种差距未来还会进一步拉大。
+
+------
 现在有24个分支条件需要处理，如果用switch需要写24个case的代码，而且每个case里面要处理的逻辑可能搞混，但如果分成2\*3\*4种情况处理，也是24个分支，但是代码只需要写2+3+4=9种case
 
 -----
