--- a/text/挑战.md
+++ b/text/挑战.md
@@ -2,6 +2,9 @@
 
 最新 5.3：
 
+当搜索次数太多时一定要记得分类。搜索是附着在结构上的，搜出来的东西改变了结构，从而产生新的搜索方式。
+
+-------
 你们研究的东西都特别复杂，我是一点都看不懂。我写的东西都很简单，你们很容易就能看懂，但你们就是注意不到，就算看到了也不会当回事，你们判断一个东西有没有价值和我的差距太大了，这种差距未来还会进一步拉大。
 
 ------
