--- a/text/挑战.md
+++ b/text/挑战.md
@@ -1,7 +1,10 @@
 2025年挑战：逃避没用，不把最硬的骨头给啃下来，不可能研究出什么实质性的突破。
 
-最新 5.3：
+最新 5.4：
 
+苗翠花这部剧在网上时看过，剧情忘了，现在回看一些片头曲的剪辑就感觉很喜欢，但苗翠花这个人物放在这里总感觉有点不太合适。仔细体验了一下，我更喜欢的并不是电视剧里苗翠花的人设，而是演员的形象、气质和表演。苗翠花和阿九这两个人物的表演都是完美的，可以说演员和角色已经融为一体，但还是有些差别，前者是让演员为角色代言，通过角色来展现演员的实力，后者是演员把自己融入到角色中，并重塑角色的灵魂。
+
+------
 收到邮件回复了，就是你回邮件的时候有没有想过一个问题，你这样回复我你让我下次怎么发，你还不如当作垃圾邮件不回复。
 
 ------
@@ -38,7 +41,7 @@ https://www.zhihu.com/question/1901693164693230607/answer/1901992557875040324
 
 小说：牛肉汤 vs 慕容九
 
-参赛：青青 白惜香+梅绛雪+蓝小蝶   丁灵琳 赵敏/侍剑+丁珰+苗翠花
+参赛：青青 白惜香+梅绛雪+蓝小蝶   丁灵琳 赵敏+丁珰+侍剑
 
 说明：只取每个人物中最让人心动的某些瞬间参赛，所以不要揪着谁哪里哪里不好，比的是每个人最亮眼的闪光点。
 
