--- a/text/挑战.md
+++ b/text/挑战.md
@@ -2,7 +2,7 @@
 
 最新 5.4：
 
-苗翠花这部剧在网上时看过，剧情忘了，现在回看一些片头曲的剪辑就感觉很喜欢，但苗翠花这个人物放在这里总感觉有点不太合适。仔细体验了一下，我更喜欢的并不是电视剧里苗翠花的人设，而是演员的形象、气质和表演。苗翠花和阿九这两个人物的表演都是完美的，可以说演员和角色已经融为一体，但还是有些差别，前者是让演员为角色代言，通过角色来展现演员的实力，后者是演员把自己融入到角色中，并重塑角色的灵魂。
+苗翠花这部剧在网上时看过，剧情忘了，现在回看一些片头曲的剪辑就感觉很喜欢，但苗翠花这个人物放在这里总感觉有点不太合适。仔细体验了一下，我更喜欢的并不是电视剧里苗翠花的人设，而是演员的形象、气质和表演。苗翠花和阿九这两个人物的表演都是完美的，可以说演员和角色已经融为一体，但还是有些差别，前者是让角色为演员代言，通过角色来展现演员的实力，后者是演员把自己融入到角色中，并重塑角色的灵魂。
 
 ------
 收到邮件回复了，就是你回邮件的时候有没有想过一个问题，你这样回复我你让我下次怎么发，你还不如当作垃圾邮件不回复。
