--- a/text/挑战.md
+++ b/text/挑战.md
@@ -2,6 +2,12 @@
 
 最新 5.4：
 
+毛泽东揭周恩来"政治弱点"：半"虎气"半"猴气"【6】<br>
+http://zhouenlai.people.cn/n1/2017/1113/c409117-29643434-6.html
+
+　中国共产党能夺得天下，靠的是党组织的力量，而不是每个党员的“独立”“个性”。即便是错误，也必须少数服从多数，个人服从组织，全党服从中央。否则就不能保证正确时的全党服从中央，就无法步调一致，就无法形成统一的力量。懂政治的人都不难明白这个道理，所以审查干部时，再大的错误，只要是执行组织决议而非另搞一套，你就不能把账算到他个人头上而一棍子打死。否则后患无穷，党将失去统一的意志和力量。
+
+------
 毛远新谈毛泽东对周恩来的看法：（他）宁可犯政治错误，也不犯组织错误!<br>
 https://www.bilibili.com/video/BV1Vj421X7aY/
 
