--- a/text/挑战.md
+++ b/text/挑战.md
@@ -2,10 +2,16 @@
 
 最新 5.4：
 
+李慎明：毛泽东关于保持党和政权永不变质战略思想产生的渊源、发展脉络及相关思考<br>
+http://marxism.cass.cn/nzmzjxz/lsm/lsmzzylw/202401/t20240111_5727698.shtml
+
+一是周恩来的一段谈话。20世纪80年代末，薄一波的秘书董宏告诉笔者说：周恩来总理曾对薄老说，一波呀，毛主席下决心要做的事，你可以表示反对，但不要轻易表示反对。在历史上，有几次，我曾认为主席的决策不对，表示反对，但过一段时间都证明他的决策是对的。以后我就谨慎了，不轻易表示反对了。但后来又有一次，我确信主席错了，我坚决表示反对，但实践却又证明是主席对了。因此，对主席的意见和决策，你可以反对，但不要轻易反对。
+
+------
 毛泽东揭周恩来"政治弱点"：半"虎气"半"猴气"【6】<br>
 http://zhouenlai.people.cn/n1/2017/1113/c409117-29643434-6.html
 
-　中国共产党能夺得天下，靠的是党组织的力量，而不是每个党员的“独立”“个性”。即便是错误，也必须少数服从多数，个人服从组织，全党服从中央。否则就不能保证正确时的全党服从中央，就无法步调一致，就无法形成统一的力量。懂政治的人都不难明白这个道理，所以审查干部时，再大的错误，只要是执行组织决议而非另搞一套，你就不能把账算到他个人头上而一棍子打死。否则后患无穷，党将失去统一的意志和力量。
+中国共产党能夺得天下，靠的是党组织的力量，而不是每个党员的“独立”“个性”。即便是错误，也必须少数服从多数，个人服从组织，全党服从中央。否则就不能保证正确时的全党服从中央，就无法步调一致，就无法形成统一的力量。懂政治的人都不难明白这个道理，所以审查干部时，再大的错误，只要是执行组织决议而非另搞一套，你就不能把账算到他个人头上而一棍子打死。否则后患无穷，党将失去统一的意志和力量。
 
 ------
 毛远新谈毛泽东对周恩来的看法：（他）宁可犯政治错误，也不犯组织错误!<br>
