--- a/text/挑战.md
+++ b/text/挑战.md
@@ -2,6 +2,17 @@
 
 最新 5.4：
 
+邓小平：毛泽东整倒干部心里有数 有些是背黑锅<br>
+https://m.haiwainet.cn/middle/345831/2015/0518/content_28745256_2.html
+
+现在有些同志把许多问题都归结到毛泽东同志的个人品质上。实际上，不少问题用个人品质是解释不了的。即使是品质很好的人，在有些情况下，也不能避免错误。红军时代中央革命根据地打AB团，打AB团的人品质都不好?开始打AB团的时候，毛泽东同志也参加了，只是他比别人觉悟早，很快发现问题，总结经验教训，到延安的时候就提出“一个不杀、大部不抓”。在那种异常紧张的战争环境中，内部发现坏人，提高警惕是必要的。但是，脑子发热，分析不清，听到一个口供就相信了，这样就难于避免犯错误。从客观上说，环境的确紧张。从主观上讲，当然也有个没有经验的问题。
+
+红二十军为何兵变：认定毛泽东指使李韶九滥杀 <br>
+https://m.sohu.com/n/373146368/
+
+用这样的方式去打AB团，自然使许多人屈打成招，而一旦承认自己是AB团分子，又必须把他所在同一级单位的“反革命组织完全招出……等机关内AB团组织完全供出，如供不出，则续刑追”。如此一来，“犯人不（就）在各机关捉熟人诬供，没有熟人的，则看见过某机关袖章上人名的，即据以招供”，以至于人们不得不或把袖章上的名字涂去，或者将袖章放在袋子里面。在让所谓AB团犯人招供时，一定要提供一定数量的AB团同犯名单，如果招得太少，即认为不忠实，“甚至有开一名单向犯人提问的，有用暗示的方法，要犯人招供的”，凡被两个人供出为AB团，“不论事实是否符合，更不耐心去另找旁证证明招出的口供忠实与否，即将被供人拘来”。特别是在第三次反“围剿”战争（此次反“围剿”从1931年7月至9月历时3个月）最激烈的时候，肃AB团“天天在行动中，而拘捕之人犯，又多无时间来审讯，于是把拘捕的人犯或被AB团供有组织的机关内工作人员站队点名，询问，如承认加入AB团的，即允许自首自新，不承认的即认为是AB团坚决分子处以死刑”。处决所谓AB团分子多在夜间进行，“如省保卫处曾于一夜处决六十个保卫队，兴国一夜处决三四十个”，“间有残酷办法，剖腹剜心（各县都有此现象）”。
+
+-------
 李慎明：毛泽东关于保持党和政权永不变质战略思想产生的渊源、发展脉络及相关思考<br>
 http://marxism.cass.cn/nzmzjxz/lsm/lsmzzylw/202401/t20240111_5727698.shtml
 
