--- a/text/挑战.md
+++ b/text/挑战.md
@@ -2,6 +2,28 @@
 
 最新 5.4：
 
+宁都会议解除毛泽东军权的前后<br>
+https://www.fjsen.com/l/2009-12/11/content_2471307_6.htm
+
+周恩来已经知道会议要干什么，有些沉默。人到齐了，他宣布开会。
+
+会议开始不久，室内渐渐烟雾缭绕，气氛令人压抑。项英坐在周恩来对面。他首先对第一天的会议作了简要的概括：“我认为会议的焦点只有一个，那就是在前线的委员们，首先是毛泽东等同志，是否认真执行共产国际和中央的指示问题。当然，结论也只有一个：没有执行！”
+
+**周恩来说得很谨慎，“先慢一点作结论好不好？会议刚刚开始，结论已经有了，那还开什么会？也听听前方同志的意见嘛！”**
+
+项英激动得握笔的手簌簌发抖，用力把刚点着的烟在烟灰缸里摁灭，霍地站了起来，质问：“难道屡次抗拒中央的作战指示，还不能说明问题吗？每次战斗都叫苦连天，难道不是对胜利缺乏信心吗？对争取一省或数省胜利的目标采取怀疑的态度，难道还不是右倾情绪吗？”
+
+接着，顾作霖等后方委员作了言词更为激烈的发言。
+
+**周恩来对后方苏区中央局委员们说：“前方的情况跟后方的情况不一样，和在地图上推想的更不一样……”**
+
+项英不想听前方同志作具体解释：“反正你们是寻找借口不执行命令，这是根本事实。”
+
+**周恩来一脸苦涩地说：“总应让人把话说完嘛！”**
+
+项英严厉地说：“具体事实不是问题的实质，问题的实质在于你们对命令执行的不坚决！这是对共产国际指示的态度问题。你们对国际路线是忠实的执行还是口头答应执行……这里应该特别指出的是毛泽东同志，他对国际一向采取不尊重的态度，拥兵自重。”
+
+-------
 邓小平：毛泽东整倒干部心里有数 有些是背黑锅<br>
 https://m.haiwainet.cn/middle/345831/2015/0518/content_28745256_2.html
 
