--- a/text/挑战.md
+++ b/text/挑战.md
@@ -2,6 +2,16 @@
 
 最新 5.4：
 
+任弼时做思想工作的故事<br>
+https://www.rmzxw.com.cn/c/2014-11-27/412060.shtml
+
+任弼时就让傅钟将他的经历和所见所闻详详细细地叙述一遍。<br>
+任弼时听罢，严肃地问：“中央有没有北上的决议？”<br>
+“有。”　<br>
+“有，为什么不执行？”　<br>
+这一问，一针见血，戳中傅钟的要害，尽管草地的清晨格外寒冷，内疚之情仍令他直冒汗。关于制定一、四方面军共同北上的战略方针，中央召开了多次会议，其中有两个会议，傅钟也列席了，但却没有执行和维护它。
+
+------------
 宁都会议解除毛泽东军权的前后<br>
 https://www.fjsen.com/l/2009-12/11/content_2471307_6.htm
 
