--- a/text/挑战.md
+++ b/text/挑战.md
@@ -2,6 +2,51 @@
 
 最新 5.4：
 
+长征路上的“俄界会议” <br>
+https://www.sohu.com/a/312441995_100028867
+
+就在“俄界会议”上，毛泽东发言说，向北发展只要能保留几百个幹部几千名战士，就是很大胜利了。
+
+草地分兵危机，毛主席如何率领红军渡过至暗时刻，获得新生 - 艺林话史的文章 <br>
+https://zhuanlan.zhihu.com/p/481476108
+
+所以会议开始后，毛主席就守着一个底线，此时决不能承认政治路线有问题，也不能区分自己和“留苏派”的不同，那样只会越描越黑。
+
+在这万分危急的情况下，作为一名忠肝义胆的铁血军人，彭老总提出：“干脆控制了陈昌浩，统一指挥右路军赶快北上。”毛主席想了一会儿说，不行，那样就给了张国焘落下口实，说是我们搞分裂，还是维护大局重要。
+
+毛泽东谈长征<br>
+http://theory.people.com.cn/n1/2016/1027/c352499-28813734.html
+
+李一氓回忆说，陕北人民看见来了一支队伍，感到很迷惑，说他是中央红军呢，一个个破衣烂衫，瘦骨嶙峋。有的光着脚，有的穿着草鞋，穿得衣服颜色不一，很单薄、很烂，连老百姓穿的都不如，实在像一群叫花子。这就是红军到达陕北的狼狈形象。8万红军从一个南方的鱼米之乡被追赶到人烟稀少、土地荒芜的陕北，而且只剩下7000多人，个个“皮包骨”，破衣烂衫的，因而有些人发生悲观情绪，也是可以理解的。
+
+俄界会议上，毛主席为何力排众议不处理张国焘，这背后有何隐情？<br>
+https://baijiahao.baidu.com/s?id=1750760092764049953
+
+彭德怀元帅在日后谈起俄界会议的时候也表示，如果当时开除了张国焘党籍的话，那么想要再争取红四方面军过草地和红一方面军会合，恐怕就十分困难了。
+
+双石：毛泽东发出“不出一年你们也会北上”预言地的考证<br>
+https://www.hswh.org.cn/wzzx/llyd/ls/2024-09-22/90171.html
+
+我告诉你们，四川坝子敌人有重兵，你们冲不出去;我们现在向北走，给你们开路，我估计不出一年，你们也会跟着我们北上。
+
+密电、夜行和追令：长征中极为关键的一步<br>
+https://www.whb.cn/zhuzhan/dushu/20190524/265265.html
+
+党中央率领中央红军主力北进。清晨，红军大学政委何畏坐着担架来找陈昌浩，问：是不是有命令叫走？
+
+陈昌浩一听急了：“我们没有下命令，赶紧叫他们回来！”
+
+接着，四方面军有个不明真相的干部打电话来请示陈昌浩：“中央红军走了，还对我们警戒，打不打？”
+
+陈昌浩拿着话筒问徐向前：“这事怎么办？”
+
+徐向前毫不迟疑地说：“哪有红军打红军的道理！叫他们听指挥，无论如何不能打！”
+
+陈昌浩当时不错，完全根据徐向前的意见，作了答复，避免了一场红军自己打自己的悲剧的发生。陈昌浩当时是政治委员，有最后决定权，如果他下决心打，徐向前是很难阻止的。
+
+徐向前当时左右为难，思来想去，彻夜难眠，忍不住偷偷哭了一场。他后来描述自己的心情：“我的内心很矛盾。一方面，几年来自己同张国焘、陈昌浩共事，一直不痛快，想早点离开他们。两军会合后，我对陈昌浩说，想去中央做点具体工作，的确是心里话。我是左思右想盘算了很久，才说出来的。**另一方面，右路军如单独北上，等于把四方面军分成两半，自己也舍不得。四方面军是我眼看着从小到大发展起来的，大家操了不少心，流了不少血汗，才形成这么一支队伍，真不容易啊！分成两半，各走一方，无论从理智或感情上说，我都难以接受。**这也许是我的弱点所在吧。”“我想，是跟着中央走还是跟着部队南下呢？走嘛，自己只能带上个警卫员，骑着马去追中央。那时，陈昌浩的威信不低于我，他能说会写，打仗勇敢，又是政治委员。他不点头，我一个人是带不动队伍的，最多只能悄悄带走几个人。想来想去，还是决定和部队在一起，走着看吧！这样，我就执行了张国焘的南下命令，犯了终生抱愧的错误。”
+
+--------
 任弼时做思想工作的故事<br>
 https://www.rmzxw.com.cn/c/2014-11-27/412060.shtml
 
