--- a/text/挑战.md
+++ b/text/挑战.md
@@ -44,7 +44,7 @@ https://www.whb.cn/zhuzhan/dushu/20190524/265265.html
 
 陈昌浩当时不错，完全根据徐向前的意见，作了答复，避免了一场红军自己打自己的悲剧的发生。陈昌浩当时是政治委员，有最后决定权，如果他下决心打，徐向前是很难阻止的。
 
-徐向前当时左右为难，思来想去，彻夜难眠，忍不住偷偷哭了一场。他后来描述自己的心情：“我的内心很矛盾。一方面，几年来自己同张国焘、陈昌浩共事，一直不痛快，想早点离开他们。两军会合后，我对陈昌浩说，想去中央做点具体工作，的确是心里话。我是左思右想盘算了很久，才说出来的。**另一方面，右路军如单独北上，等于把四方面军分成两半，自己也舍不得。四方面军是我眼看着从小到大发展起来的，大家操了不少心，流了不少血汗，才形成这么一支队伍，真不容易啊！分成两半，各走一方，无论从理智或感情上说，我都难以接受。**这也许是我的弱点所在吧。”“我想，是跟着中央走还是跟着部队南下呢？走嘛，自己只能带上个警卫员，骑着马去追中央。那时，陈昌浩的威信不低于我，他能说会写，打仗勇敢，又是政治委员。他不点头，我一个人是带不动队伍的，最多只能悄悄带走几个人。想来想去，还是决定和部队在一起，走着看吧！这样，我就执行了张国焘的南下命令，犯了终生抱愧的错误。”
+徐向前当时左右为难，思来想去，彻夜难眠，忍不住偷偷哭了一场。他后来描述自己的心情：“我的内心很矛盾。一方面，几年来自己同张国焘、陈昌浩共事，一直不痛快，想早点离开他们。两军会合后，我对陈昌浩说，想去中央做点具体工作，的确是心里话。我是左思右想盘算了很久，才说出来的。<b>另一方面，右路军如单独北上，等于把四方面军分成两半，自己也舍不得。四方面军是我眼看着从小到大发展起来的，大家操了不少心，流了不少血汗，才形成这么一支队伍，真不容易啊！分成两半，各走一方，无论从理智或感情上说，我都难以接受。</b>这也许是我的弱点所在吧。”“我想，是跟着中央走还是跟着部队南下呢？走嘛，自己只能带上个警卫员，骑着马去追中央。那时，陈昌浩的威信不低于我，他能说会写，打仗勇敢，又是政治委员。他不点头，我一个人是带不动队伍的，最多只能悄悄带走几个人。想来想去，还是决定和部队在一起，走着看吧！这样，我就执行了张国焘的南下命令，犯了终生抱愧的错误。”
 
 --------
 任弼时做思想工作的故事<br>
