--- a/text/挑战.md
+++ b/text/挑战.md
@@ -2,6 +2,15 @@
 
 最新 5.4：
 
+江青“我是毛主席的一条狗，他叫我咬谁我就咬谁” <br>
+https://www.hutong9.net/forum.php?mod=viewthread&tid=166500
+
+江青要做“没有戴帽子的皇帝”<br>
+https://www.jfdaily.com/wx/detail.do?id=7289
+
+江青接着讲到了她和邓小平在政治局内的斗争，自称是“过了河的卒子”，要吃掉邓小平这个“反革命老帅”：
+
+-------
 长征路上的“俄界会议” <br>
 https://www.sohu.com/a/312441995_100028867
 
