--- a/text/挑战.md
+++ b/text/挑战.md
@@ -10,6 +10,11 @@ https://www.jfdaily.com/wx/detail.do?id=7289
 
 江青接着讲到了她和邓小平在政治局内的斗争，自称是“过了河的卒子”，要吃掉邓小平这个“反革命老帅”：
 
+答意大利记者奥琳埃娜·法拉奇问<br>
+http://www.qstheory.cn/books/2019-07/31/c_1119484755_47.htm
+
+邓：江青打着毛主席的旗帜搞，毛主席干预不力，这点，毛主席是有责任的。江青坏透了。怎么给“四人帮”定罪都不过分。“四人帮”伤害了成千上万的人。
+
 -------
 长征路上的“俄界会议” <br>
 https://www.sohu.com/a/312441995_100028867
