--- a/text/挑战.md
+++ b/text/挑战.md
@@ -2,6 +2,18 @@
 
 最新 5.4：
 
+毛泽东最后一次召集政治局会议 痛骂“江青混蛋” <br>
+https://www.chinanews.com.cn/cul/2011/01-19/2797095.shtml
+
+　　1975年5月，毛泽东最后主持中央政治局会议，周恩来也最后一次抱病参加。此时毛泽东已经说话口齿不清，需要身边的人翻译。当着众人的面，他带着满面怒气斥责说：“江青混蛋！”
+
+　　由于这话别人听不清，在身边做翻译的那位女士出于害怕，改用比较婉转的意思表达出来。毛泽东当时却急了，气愤地挥着手，要求按原文说。结果“江青混蛋”这话在会上当众翻译出来。
+
+　　听到这话，王洪文、姚文元脸都吓白了，大概是感到自己攀的这棵大树眼看要倒了。江青本人和张春桥这时却脸不变色，毕竟是有些政治斗争经验，知道毛泽东还不至于真正打倒自己。
+
+江青说是毛主席指使她咬人，真有这种事吗？我认为没有的。毛主席知道江青在到处乱咬人吗？明显知道的。
+
+-------
 江青“我是毛主席的一条狗，他叫我咬谁我就咬谁” <br>
 https://www.hutong9.net/forum.php?mod=viewthread&tid=166500
 
