--- a/text/挑战.md
+++ b/text/挑战.md
@@ -1,7 +1,13 @@
 2025年挑战：逃避没用，不把最硬的骨头给啃下来，不可能研究出什么实质性的突破。
 
-最新 5.4：
+最新 5.5：
 
+群论中最令你惊艳的结论是什么？为什么？ - Yifan的回答 <br>
+https://www.zhihu.com/question/528285475/answer/2447759464
+
+Yifan：我最近比较喜欢的概念是quasirandom group，可以翻译成拟随机群，是一个近年来比较广为研究的概念。
+
+--------
 毛泽东最后一次召集政治局会议 痛骂“江青混蛋” <br>
 https://www.chinanews.com.cn/cul/2011/01-19/2797095.shtml
 
