--- a/text/挑战.md
+++ b/text/挑战.md
@@ -2,6 +2,11 @@
 
 最新 5.5：
 
+我在这里分享的数学相关回答我都是看不懂的，但我感觉你们在我这里看到会比你们在知乎刷到更令你们惊讶。
+
+PS：我的分享都是通过指标定理来生成的。
+
+-------
 群论中最令你惊艳的结论是什么？为什么？ - Yifan的回答 <br>
 https://www.zhihu.com/question/528285475/answer/2447759464
 
