--- a/text/挑战.md
+++ b/text/挑战.md
@@ -2,6 +2,14 @@
 
 最新 5.5：
 
+网左的考察报告（我承认自己标题党） - Iytcyy24在此的文章 <br>
+https://zhuanlan.zhihu.com/p/1900373440025827153
+
+Iytcyy24在此：
+最近在尝试慢性自杀
+抛去无脑跟风的梗小鬼，把政治当时尚单品的（指下图这种），在网左眼中群众是愚昧的，上学是压迫的，左籍是互开的，亲戚是攀附的（比如原神越看越红），自己是救世主的，坏事是切割的。。 言必称十年动乱，属于是靠摩擦那段不提的历史让自己产生性快感，其实网左是有自己的一套历史叙事的，不过个人感觉阴谋论居多，你能看到的所有网左梗都是基于…阅读全文​
+
+------
 我在这里分享的数学相关回答我都是看不懂的，但我感觉你们在我这里看到会比你们在知乎刷到更令你们惊讶。
 
 PS：我的分享都是通过指标定理来生成的。
