--- a/text/挑战.md
+++ b/text/挑战.md
@@ -2,6 +2,12 @@
 
 最新 5.5：
 
+老婆，我只想你属于我 - JerryInnerfire的文章  <br>
+https://zhuanlan.zhihu.com/p/1901740461409940040
+
+春秋禾：我记得我打开的是知乎啊
+
+-------
 网左的考察报告（我承认自己标题党） - Iytcyy24在此的文章 <br>
 https://zhuanlan.zhihu.com/p/1900373440025827153
 
