--- a/text/挑战.md
+++ b/text/挑战.md
@@ -2,6 +2,77 @@
 
 最新 5.5：
 
+容祖儿 - 爱情复兴
+
+作词: 何启弘
+作曲: 황성제
+
+华丽的巴洛克圆舞曲<br>
+卡夫卡朗诵着诗句<br>
+时空互相交错的场景<br>
+中古世纪的爱情<br>
+我像关在 被诅咒的古堡<br>
+我像闯进 马车经过的巷道<br>
+我像听见 修道院的祷告<br>
+
+逆流时间的路 找不到<br>
+找不到<br>
+
+爱听说能穿越几世纪<br>
+痛苦过幸福过会重映<br>
+我们附身彼此记忆<br>
+才这样纠缠到无止尽<br>
+传说爱能飞几千里<br>
+降落到今生的拥抱里<br>
+如果摆脱不了宿命<br>
+就任它写错剧情<br>
+
+等待着被救赎的哭泣<br>
+连上帝都只能默许<br>
+我们相遇惊动了天地<br>
+横扫乱世的爱情<br>
+
+我像看到 木偶有泪在掉<br>
+我像听见 街头艺人的讪笑<br>
+我像俘虏 卫兵挡在地窖<br>
+
+我们都别再做个逃兵<br>
+等待再一次爱情复兴<br>
+让秒针暂停<br>
+从轮回中睡醒<br>
+爱个彻底<br>
+爱是梦魇 在追逐的 战役<br>
+
+爱是一出<br>
+唱不完的歌剧
+
+火遍网络的《红色高跟鞋》，原来抄袭了这首《Take It From Me》<br>
+https://www.bilibili.com/video/BV18f4y1H7cj/
+
+蔡健雅 - 红色高跟鞋
+
+词曲：蔡健雅
+
+该怎么去形容你最贴切<br>
+拿什么跟你作比较才算特别<br>
+对你的感觉 强烈<br>
+却又不太了解 只凭直觉<br>
+你像窝在被子里的舒服<br>
+却又像风捉摸不住<br>
+像手腕上散发的香水味<br>
+像爱不释手的 红色高跟鞋<br>
+
+你像窝在被子里的舒服<br>
+却又像风捉摸不住<br>
+像手腕上散发的香水味<br>
+像爱不释手的<br>
+我爱你有种左灯右行的冲突<br>
+疯狂却怕没有退路<br>
+你能否让我停止这种追逐<br>
+就当那双 最后唯一的<br>
+红色高跟鞋
+
+------
 老婆，我只想你属于我 - JerryInnerfire的文章  <br>
 https://zhuanlan.zhihu.com/p/1901740461409940040
 
