--- a/text/挑战.md
+++ b/text/挑战.md
@@ -4,6 +4,8 @@
 
 我感觉如果你长期盯着一个人的知乎主页看（不是普通的关注），就会和她产生心灵感应，这应该不是我独有的。
 
+还有心灵感应的人一般都喜欢听相同的歌，你也可以分享一些好听的歌给你暗恋的人，如果她也喜欢，那么你们就能建立心灵感应。
+
 -------
 容祖儿 - 爱情复兴
 
