--- a/text/挑战.md
+++ b/text/挑战.md
@@ -5,6 +5,8 @@
 
 未来的ai感知摄像机应该是这样的，根据你的一些基本特征来生成录音和录像，同时基本特征的选取和生成方式都有无数种选择。以后拍黄片也不用打码了，别人无法根据视频中的你认出现实中的你，但是真实感又是无可挑剔的，同时在体验上也是完美的。长得漂亮的女生就不要去拍黄片了，因为拍出来的就是你本人，但是你拍出来的在无数ai感知摄像机拍的视频中又是非常普通的，所以去拍也没关系。现在ai生成的图片和视频，从我个人的审美角度看无论是真实感还是体验性都完全不合格，和现实中拍出来的差距很大，当然要区分也是有门槛的，绝大部分普通人甚至ai工程师都区分不出来。
 
+真实性不等于真实感，我认为日本、台湾拍的a片真实感很差，有些韩国的三级片真实感稍微好一点，其实看多了也会觉得很假。
+
 --------
 既想要和这里爱我的人建立现实中的联系，又害怕过去在现实中认识的人来到这里，能分析出为什么吗？
 
