--- a/text/挑战.md
+++ b/text/挑战.md
@@ -293,7 +293,7 @@ https://www.zhihu.com/question/1901693164693230607/answer/1901992557875040324
 
 参赛：青青 白惜香+梅绛雪+蓝小蝶   丁灵琳 赵敏+丁珰+侍剑
 
-说明：只取每个人物中最让人心动的某些瞬间参赛，所以不要揪着谁哪里哪里不好，比的是每个人最亮眼的闪光点。
+说明：只取每个人物中最让人心动的某些瞬间参赛，所以不要揪着谁哪里哪里不好，也不看出场频率有多高，比的是每个人最亮眼的闪光点。
 
 -------
 萧十一郎之割鹿刀<br>
