--- a/text/挑战.md
+++ b/text/挑战.md
@@ -2,6 +2,9 @@
 
 最新 5.6：
 
+假如我可以安逸的活到80岁，但是把这一年不赚钱对搞研究也没什么用的时光从我的人生中抹去，应该也会留有遗憾的吧。
+
+------
 亚视四大经典武侠剧超燃武打！浓浓的武侠风，满满的回忆！<br> 
 https://www.bilibili.com/video/BV1ft4113743/
 
