--- a/text/挑战.md
+++ b/text/挑战.md
@@ -4,7 +4,7 @@
 
 有没有这样一种可能，就是第一个在这里赞助我的人和我互动的频率并不高，甚至可能根本就没有互动。我之前一直坚持的观点是，会赞助我的人一定是在这里和我高频互动的人，这种观点很可能是错的。
 
-第一个赞助我的人应该是那种含蓄内敛不太张扬却有足够强大勇气的人，如果这样的人存在我在这里先谢谢了，今年先不用了，明年有需要的话希望你能赞助我一下。
+第一个赞助我的人应该是那种含蓄内敛不太张扬却有足够强大勇气的人，如果这样的人存在我在这里先谢谢了，今年应该不需要，明年有需要的话希望你能赞助我一下，能提前赞助我给我增加点信心那当然更感激不尽了。
 
 ------
 假如我可以安逸的活到80岁，但是把这一年不赚钱对搞研究也没什么用的时光从我的人生中抹去，应该也会留有遗憾的吧。
