--- a/text/挑战.md
+++ b/text/挑战.md
@@ -6,6 +6,8 @@
 
 第一个赞助我的人应该是那种含蓄内敛不太张扬却有足够强大勇气的人，如果这样的人存在我在这里先谢谢了，今年应该不需要，明年有需要的话希望你能赞助我一下，能提前赞助我给我增加点信心那当然更感激不尽了。
 
+还有人想拉我进什么失业乞讨群打赏我几顿饭钱，我在这里也先谢谢你了，我不需要。
+
 ------
 假如我可以安逸的活到80岁，但是把这一年不赚钱对搞研究也没什么用的时光从我的人生中抹去，应该也会留有遗憾的吧。
 
