--- a/text/挑战.md
+++ b/text/挑战.md
@@ -8,7 +8,7 @@
 
 还有人想拉我进什么失业乞讨群打赏我几顿饭钱，我在这里也先谢谢你了，我不需要。
 
-第一个赞助我的人应该是男的，不可能是女的，但是想要他赞助我需要我创造一个合适的时机，应该怎么做我还没想好。
+第一个赞助我的人应该是男的，但是想要他赞助我需要我创造一个合适的时机，应该怎么做我还没想好。
 
 ------
 假如我可以安逸的活到80岁，但是把这一年不赚钱对搞研究也没什么用的时光从我的人生中抹去，应该也会留有遗憾的吧。
