--- a/text/挑战.md
+++ b/text/挑战.md
@@ -2,6 +2,9 @@
 
 最新 5.6：
 
+如果我研究失败了或者说一锤定音的人不是我，除了我父母之外没有人会在意我的死活，虽然他们好像更在意自己的面子，怕被亲戚和邻居议论。如果我成功了，那还会连温饱的钱都赚不到吗？不太可能出现我快成功了，却刚好没钱，就算出现这种情况，我在现实中也是可以借到钱的。我的父母虽然不是好父母，但是道德水准是在平均线以上的，他们只是想我做一个正常人，如果我好好工作上班，他们也不至于和我关系如此之差，但我不能满足他们。甚至我父母都不是最封建的，如果我能考上浙江大学，他们也是可以支持我不工作搞研究的。他们愤怒的是我不是高智商水平不够自己的生存都搞不定还去搞研究。
+
+-----
 有没有这样一种可能，就是第一个在这里赞助我的人和我互动的频率并不高，甚至可能根本就没有互动。我之前一直坚持的观点是，会赞助我的人一定是在这里和我高频互动的人，这种观点很可能是错的。
 
 第一个赞助我的人应该是那种含蓄内敛不太张扬却有足够强大勇气的人，如果这样的人存在我在这里先谢谢了，今年应该不需要，明年有需要的话希望你能赞助我一下，能提前赞助我给我增加点信心那当然更感激不尽了。
