--- a/text/挑战.md
+++ b/text/挑战.md
@@ -2,7 +2,9 @@
 
 最新 5.6：
 
-如果我研究失败了或者说一锤定音的人不是我，除了我父母之外没有人会在意我的死活，虽然他们好像更在意自己的面子，怕被亲戚和邻居议论。如果我成功了，那还会连温饱的钱都赚不到吗？不太可能出现我快成功了，却刚好没钱，就算出现这种情况，我在现实中也是可以借到钱的。我的父母虽然不是好父母，但是道德水准是在平均线以上的，他们只是想我做一个正常人，如果我好好工作上班，他们也不至于和我关系如此之差，但我不能满足他们。甚至我父母都不是最封建的，如果我能考上浙江大学，他们也是可以支持我不工作搞研究的。他们愤怒的是我不是高智商水平不够自己的生存都搞不定还去搞研究。
+如果我研究失败了或者说一锤定音的人不是我，除了我父母之外没有人会在意我的死活，虽然他们好像更在意自己的面子，怕被亲戚和邻居议论。如果我成功了，那还会连温饱的钱都赚不到吗？不太可能出现我快成功了，却刚好没钱，就算出现这种情况，我在现实中也是可以借到钱的。我的父母虽然不是好父母，但是道德水准是在平均线以上的，他们只是想我做一个正常人，让我好好工作上班，但我不能满足他们。甚至我父母都不是最封建的，如果我能考上浙江大学，他们也是可以支持我不工作搞研究的。他们愤怒的是我不是高智商水平不够自己的生存都搞不定还去搞研究。
+
+不管我怎么做，他们和我的关系都不可能像你们的好父母和你们的关系一样，他们不能改变自己的封建思想，我永远不可能做一个好儿子，当然等他们老了的时候，如果我活得还可以，我也不会不理他们的。
 
 -----
 有没有这样一种可能，就是第一个在这里赞助我的人和我互动的频率并不高，甚至可能根本就没有互动。我之前一直坚持的观点是，会赞助我的人一定是在这里和我高频互动的人，这种观点很可能是错的。
