--- a/text/挑战.md
+++ b/text/挑战.md
@@ -2,7 +2,7 @@
 
 最新 5.6：
 
-事物总是想要走向反面的，我想要自己成为那个一锤定音的人，但最后偏偏不是我。不过我已经做好了接受死亡的准备，不是我又怎么样？但别想从我这里捞便宜，也许你自己独立研究一年就能成功，想从我这里白嫖什么核心技术，我就让你五年都成功不了。
+事物总是要走向反面的，我想要自己成为那个一锤定音的人，但最后偏偏不是我。不过我已经做好了接受死亡的准备，不是我又怎么样？但别想从我这里捞便宜，也许你自己独立研究一年就能成功，想从我这里白嫖什么核心技术，我就让你五年都成功不了。
 
 ------
 如果我研究失败了或者说一锤定音的人不是我，除了我父母之外没有人会在意我的死活，虽然他们好像更在意自己的面子，怕被亲戚和邻居议论。如果我成功了，那还会连温饱的钱都赚不到吗？不太可能出现我快成功了，却刚好没钱，就算出现这种情况，我在现实中也是可以借到钱的。我的父母虽然不是好父母，但是道德水准是在平均线以上的，他们只是想我做一个正常人，让我好好工作上班，但我不能满足他们。甚至我父母都不是最封建的，如果我能考上浙江大学，他们也是可以支持我不工作搞研究的。他们愤怒的是我不是高智商水平不够自己的生存都搞不定还去搞研究，潜意识他们担心的是怕老了后没人养老，当然他们不会承认的，我妈反复强调说不需要我的钱她自己赚的钱够花。
