--- a/text/收藏1.md
+++ b/text/收藏1.md
@@ -1,3 +1,13 @@
+
+你认为强人工智能会最终实现吗？ - Trisimo崔思莫的回答  <br>
+https://www.zhihu.com/question/1902512337124069385/answer/1903055618631274621
+
+神尾观铃：
+别吹了，如果真5年强人工智能，苹果微软市值就不可能和谷歌半斤八两了，我记得OPENAI估值5000亿都没有，如果这两个公司能5年内强人工智能，市值10万亿不过分吧，一年拿个5000亿利润20市盈率[尴尬]
+
+我感觉你10万亿获得的幸福感还不如我10万元的幸福感。
+
+-------
 为什么李寻欢要让出林诗音？ - momo的回答 <br>
 https://www.zhihu.com/question/280557199/answer/2894300616
 
