--- a/text/挑战.md
+++ b/text/挑战.md
@@ -1,7 +1,12 @@
 2025年挑战：逃避没用，不把最硬的骨头给啃下来，不可能研究出什么实质性的突破。
 
-最新 5.6：
+最新 5.7：
 
+形变特征、存在消元、分解递归
+
+这些说的是什么意思，很久以前写下来的，我忘了是什么意思了。
+
+-----
 我还以为真有什么心灵感应呢，原来是被知乎监控了，一次两次也是有可能的，次次都这样我不相信，这么低的概率怎么可能是巧合？
 
 ------
