--- a/text/挑战.md
+++ b/text/挑战.md
@@ -6,6 +6,8 @@
 
 这些说的是什么意思，很久以前写下来的，我忘了是什么意思了。
 
+我记得好像以前思考过并得出过一个结论，消元法和辅助线本质上是相同的，现在想了一下，没看出哪里有相同的地方。
+
 -----
 我还以为真有什么心灵感应呢，原来是被知乎监控了，一次两次也是有可能的，次次都这样我不相信，这么低的概率怎么可能是巧合？
 
