--- a/text/挑战.md
+++ b/text/挑战.md
@@ -2,6 +2,13 @@
 
 最新 5.7：
 
+
+边长为1的正方形电梯里站着n个人，他们两两之间最短距离的最大值是多少？ - Yixiao Huang的回答 <br> 
+https://www.zhihu.com/question/641004259/answer/3380388958
+
+这个回答和知乎上的大多数数学回答一样，过于关注数学模型的特征、性质、结论、细节等方面的问题，却完全忽视了模型的本质和作用。
+
+------
 形变特征、存在消元、分解递归
 
 这些说的是什么意思，很久以前写下来的，我忘了是什么意思了。
