--- a/text/挑战.md
+++ b/text/挑战.md
@@ -8,6 +8,8 @@ https://www.zhihu.com/question/641004259/answer/3380388958
 
 这个回答和知乎上的大多数数学回答一样，过于关注数学模型的特征、性质、结论、细节等方面的问题，却完全忽视了模型的本质和作用。
 
+很多科研工作者有一个误区，就是以为搞科学研究和数学研究可以不考虑作用，实际上恰恰相反，必须从需求和作用出发，然后探寻数学和科学中有哪些有价值的问题值得研究。
+
 ------
 形变特征、存在消元、分解递归
 
