--- a/text/挑战.md
+++ b/text/挑战.md
@@ -2,7 +2,16 @@
 
 最新 5.7：
 
+很久以前写的一些东西：
 
+把结构层次化后才能更好的运用递归。【怎么层次化？为什么层次化后就能更好的运用递归？比较层次化后的递归搜索和无层次的暴力搜索。】<br> 
+子结构包含子结构。【有什么好处？有什么用？】<br>
+中间结果溯源。【这个在我们分析问题时大量应用，但是怎么实现呢？】<br>
+逆向无回环路径。【这个的应用场景是什么？】<br>
+层次化的内存分配。【忘了干什么的】<br>
+A B C E F G按顺序排列，把在C左边的元素A和B放在bitmap里，这时候在C和E之前插入D，D左边元素的bitmap是由C的bitmap加上C元素组成的。【如何应用】
+
+------
 边长为1的正方形电梯里站着n个人，他们两两之间最短距离的最大值是多少？ - Yixiao Huang的回答 <br> 
 https://www.zhihu.com/question/641004259/answer/3380388958
 
