--- a/text/挑战.md
+++ b/text/挑战.md
@@ -2,6 +2,9 @@
 
 最新 5.7：
 
+我看到很多人的意见都是，让别人做出冒着极大风险的行动从而对自己产生微不足道的好处，从来就没有思考过自己是否可以做一些小亏损或者小风险的事情却对别人产生极大的好处。
+
+------
 很久以前写的一些东西：
 
 把结构层次化后才能更好的运用递归。【怎么层次化？为什么层次化后就能更好的运用递归？比较层次化后的递归搜索和无层次的暴力搜索。】<br> 
