--- a/text/收藏1.md
+++ b/text/收藏1.md
@@ -1,3 +1,9 @@
+一个编制全军覆没和两个编制的数量的人挂了，哪个更心疼？ - 栗花落香奈乎的回答  <br>
+https://www.zhihu.com/question/1899528048937788327/answer/1903362353262761160
+
+栗花落香奈乎：金门战役登岛的九千多人中，约有四千人阵亡，五千多人被俘虏，其中有八百人（年龄较大、残疾及表示坚决不肯留在台湾的）被对岸用船于1950年的五、七、九月分三批通知大陆后扔在福建福州浅滩上释放。被分三批分别在南京、杭州和福州接受隔离审查之后，一部分被判刑枪毙，一部分在开除党籍、军籍后回乡务农，之后他们又在历次政治运动中饱经磨难。剩下的四千三百多人选择在国军继续服役，并有很大一部分在88年放开两岸探亲后以台胞身份回大陆探亲，受到了当地统战部门的热烈招待，
+
+这个新闻我在很多地方看到，我没有仔细溯源考证过，很多事情并不是说的越多声音越响亮就越真实。以我对台湾新闻和大陆公知的直觉，我感觉这个报道存在很多作者个人主管臆想的成分，因为能明显感觉到有很强的偏向性和不协调的地方。
 
 你认为强人工智能会最终实现吗？ - Trisimo崔思莫的回答  <br>
 https://www.zhihu.com/question/1902512337124069385/answer/1903055618631274621
