--- a/text/挑战.md
+++ b/text/挑战.md
@@ -2,7 +2,7 @@
 
 最新 5.7：
 
-我看到很多人的意见都是，让别人做出冒着极大风险的行动却只对自己产生微不足道的好处，从来就没有思考过自己是否可以做一些小亏损或者小风险的事情从而对别人产生极大的好处。
+我看到很多人的意见都是，让别人做出冒着极大风险的行动却只对自己产生微不足道的好处，从来就没有思考过自己是否可以做一些小(无)亏损或者小( 无）风险的事情从而对别人产生极大的好处。
 
 ------
 很久以前写的一些东西：
