--- a/text/挑战.md
+++ b/text/挑战.md
@@ -2,6 +2,9 @@
 
 最新 5.7：
 
+有些硬件乘法器和加法器在电路上是同一个层次的，但乘法也可以由加法合成。
+
+-------
 我看到很多人的意见都是，让别人做出冒着极大风险的行动却只对自己产生微不足道的好处，从来就没有思考过自己是否可以做一些小(无)亏损或者小( 无）风险的事情从而对别人产生极大的好处。
 
 ------
@@ -33,7 +36,7 @@ https://www.zhihu.com/question/641004259/answer/3380388958
 我还以为真有什么心灵感应呢，原来是被知乎监控了，一次两次也是有可能的，次次都这样我不相信，这么低的概率怎么可能是巧合？
 
 ------
-事物总是要走向反面的，我想要自己成为那个一锤定音的人，但最后偏偏不是我。不过我已经做好了接受死亡的准备，不是我又怎么样？别想着从我这里捞便宜，也许你自己独立研究一年就能成功，但想从我这里白嫖什么核心技术，我就让你五年都成功不了。
+事物总是要走向反面的，我想要自己成为那个一锤定音的人，但最后偏偏不是我。不过我已经做好了接受死亡的准备，不是我又怎么样？别想着从我这里捞便宜，也许你自己独立研究一年就能成功，但想从我这里白嫖什么核心技术，我就让你五年都成功不了，说不定还让我先成功了。
 
 ------
 如果我研究失败了或者说一锤定音的人不是我，除了我父母之外没有人会在意我的死活，虽然他们好像更在意自己的面子，怕被亲戚和邻居议论。如果我成功了，那还会连温饱的钱都赚不到吗？不太可能出现我快成功了，却刚好没钱，就算出现这种情况，我在现实中也是可以借到钱的。我的父母虽然不是好父母，但是道德水准是在平均线以上的，他们只是想我做一个正常人，让我好好工作上班，但我不能满足他们。甚至我父母都不是最封建的，如果我能考上浙江大学，他们也是可以支持我不工作搞研究的。他们愤怒的是我不是高智商水平不够自己的生存都搞不定还去搞研究，潜意识他们担心的是怕老了后没人养老，当然他们不会承认的，我妈反复强调说不需要我的钱她自己赚的钱够花。
