--- a/text/挑战.md
+++ b/text/挑战.md
@@ -2,6 +2,11 @@
 
 最新 5.7：
 
+不要太执着于概念的本源，目标是把复杂的过程等价变换成简单的，已经很简单就不要去追究了，比如ax=0且x≠0，那么就可以直接得出a=0
+
+不行，这个一定要去追究根源。
+
+------
 三角形中线交于一点，中点、3等分点、5等分点（通过素数等分点建立容器）。
 
 a|b b|c a|c 这个和素数的构造有什么关系？
