--- a/text/挑战.md
+++ b/text/挑战.md
@@ -2,6 +2,9 @@
 
 最新 5.7：
 
+假想有一个网络赛博女友，这种幻想毫无用处。但是假想有一个高智商的赛博读者，真的挺有用的，当我写点东西时就会反复从读者的角度去理解，把我以前模糊不清的想法思考的更加深入，如果没人看那我就没什么兴趣花更多的精力去思考，因为就算错误百出也不会有人知道，有人看我就会反复斟酌。
+
+------
 不要太执着于概念的本源，目标是把复杂的过程等价变换成简单的，已经很简单就不要去追究了，比如ax=0且x≠0，那么就可以直接得出a=0
 
 不行，这个一定要去追究根源。
