--- a/text/挑战.md
+++ b/text/挑战.md
@@ -4,7 +4,7 @@
 
 假想有一个网络赛博女友，这种幻想毫无用处。但是假想有一个高智商的赛博读者，真的挺有用的，当我写点东西时就会反复从读者的角度去理解，把我以前模糊不清的想法思考的更加深入，如果没人看那我就没什么兴趣花更多的精力去思考，因为就算错误百出也不会有人知道，有人看我就会反复斟酌。
 
-------
+-------
 不要太执着于概念的本源，目标是把复杂的过程等价变换成简单的，已经很简单就不要去追究了，比如ax=0且x≠0，那么就可以直接得出a=0
 
 不行，这个一定要去追究根源。
@@ -16,6 +16,11 @@ a|b b|c a|c 这个和素数的构造有什么关系？
 
 -------
 有些硬件乘法器和加法器在电路上是同一个层次的，但乘法也可以由加法合成。
+
+数字电路设计（4）——乘法器 - chenille的文章 <br>
+https://zhuanlan.zhihu.com/p/424006728
+
+感觉不是同一个层次的，乘法电路应该比加法电路要复杂很多。
 
 -------
 我看到很多人的意见都是，让别人做出冒着极大风险的行动却只对自己产生微不足道的好处，从来就没有思考过自己是否可以做一些小(无)亏损或者小( 无）风险的事情从而对别人产生极大的好处。
