--- a/text/挑战.md
+++ b/text/挑战.md
@@ -22,6 +22,21 @@ https://zhuanlan.zhihu.com/p/424006728
 
 感觉不是同一个层次的，乘法电路应该比加法电路要复杂很多。
 
+CPU指令集的每个指令周期一样吗? - 余天升的回答 <br>
+https://www.zhihu.com/question/20388579/answer/14983592
+
+余天升：不一样的，比如说乘法的执行周期就比加法要长。所以指令需要做先后顺序的调整，以提高执行速度。
+
+Pengtitus：如果不一样，硬件如何实现？指令周期不是循环移位寄存器来实现吗？如果周期不一样，周期少的使得循环移位寄存器还未能循环一周，如何读吓一条指令？
+
+余天升：
+= =我怎么没有印象指令周期和循环移位寄存器有关。跟具体实现的硬件线路和微程序有关吧？
+
+Pengtitus：
+你说的是微程序控制器，我说的是硬布线控制器。嘿嘿。 循环移位寄存器就是环形脉冲发生器。在硬布线控制器中环形脉冲发生器一个周期完成一条指令。如果执行乘法指令比加法指令时间长，那么乘法指令与加法指令如何公用节拍信号发生器？
+
+虽然乘法器的硬件电路更加复杂，但是我好像在哪里看到过有些有乘法器的芯片，乘法指令和加法指令都只占用一个指令周期。
+
 -------
 我看到很多人的意见都是，让别人做出冒着极大风险的行动却只对自己产生微不足道的好处，从来就没有思考过自己是否可以做一些小(无)亏损或者小( 无）风险的事情从而对别人产生极大的好处。
 
