--- a/text/挑战.md
+++ b/text/挑战.md
@@ -37,6 +37,15 @@ Pengtitus：
 
 虽然乘法器的硬件电路更加复杂，但是我好像在哪里看到过有些有乘法器的芯片，乘法指令和加法指令都只占用一个指令周期。
 
+
+
+CPU指令集的每个指令周期一样吗? - 陈标龙的回答 <br>
+https://www.zhihu.com/question/20388579/answer/14985333
+
+比如cpu运算部件执行乘法指令比加法指令时间长。为什么呢？因为执行乘法指令的逻辑部件需要更多的逻辑门，而经过逻辑门是有延时的。因此，逻辑门越多，延时越长，也就导致了执行周期越长。
+
+这种经过逻辑门导致的延时相对于多条加法指令合成的乘法指令所消耗的时机基本可以忽略不计。
+
 -------
 我看到很多人的意见都是，让别人做出冒着极大风险的行动却只对自己产生微不足道的好处，从来就没有思考过自己是否可以做一些小(无)亏损或者小( 无）风险的事情从而对别人产生极大的好处。
 
