--- a/text/挑战.md
+++ b/text/挑战.md
@@ -55,7 +55,7 @@ https://www.zhihu.com/question/20388579/answer/14985333
 中间结果溯源。【这个在我们分析问题时大量使用，但是怎么实现呢？】<br>
 逆向无回环路径。【这个的应用场景是什么？】<br>
 层次化的内存分配。【忘了干什么的】<br>
-A B C E F G按顺序排列，把在C左边的元素A和B放在bitmap里，这时候在C和E之前插入D，D左边元素的bitmap是由C的bitmap加上C元素组成的。【如何应用】<br>
+A B C E F G按顺序排列，把在C左边的元素A和B放在bitmap里，这时候在C和E之间插入D，D左边元素的bitmap是由C的bitmap加上C元素组成的。【如何应用】<br>
 相似结构归为一类【如何判定相似结构，归类后有什么好处和作用】
 
 ------
