--- a/text/看书.md
+++ b/text/看书.md
@@ -1,5 +1,5 @@
 
-我们将直接应用于当前情况来回答这个问题，以避免过于抽象。——为了实践地扩展纯粹的认识，必须先验地给出一个意图，即一个目的作为客体（意志的客体），这个客体独立于所有神学原则，通过一个直接决定意志的（绝对的）命令，被表现为实践上必然的，这就是至善。然而，这是不可能的，除非假设三个理论概念（由于它们只是纯粹理性的概念，因此在理论途径上找不到相应的直观，也就是说，找不到客观实在性）：即自由、不朽和上帝。因此，通过实践法则，它命令至善在世界中的存在，假定了那些纯粹理论理性客体的可能性，即那些理论理性无法确保其客观实在性的客体；因此，纯粹理性的理论认识确实得到了增加，但这种增加仅仅在于那些对于理性来说原本是问题的（仅仅可思考的）概念现在被断定为确实存在客体的概念，因为实践理性不可避免地需要它们的存在来实现其实践上绝对必然的客体，即至善的可能性，并且理论由此被授权假定它们。
+我们将直接应用于当前情况来回答这个问题，以避免过于抽象。——为了实践地扩展纯粹的认识，必须先验地给出一个意图，即一个目的作为客体（意志的客体），这个客体独立于所有神学原则，通过一个直接决定意志的（绝对的）命令，被表现为实践上必然的，这就是至善。然而，这是不可能的，除非假设三个理论概念（由于它们只是纯粹理性的概念，因此在理论途径上找不到相应的直观，也就是说，找不到客观实在性）：即自由、不朽和上帝。因此，通过要求一个世界中可能至善之实存的那个实践法则，假定了那些纯粹理论理性客体的可能性，即那些理论理性无法确保其客观实在性的客体；因此，纯粹理性的理论认识确实得到了增加，但这种增加仅仅在于那些对于理性来说原本是悬设的（仅仅可思考的）概念现在被断定为确实存在客体的概念，因为实践理性不可避免地需要它们的存在来实现其实践上绝对必然的客体，即至善的可能性，并且理论由此被授权假定它们。
 
 这种理论理性的扩展并不是什么思辨的扩展，即为了在理论意图中对其进行积极使用。因为通过实践理性在这里所完成的，仅仅是那些概念是实在的，并且确实拥有其（可能的）客体，但同时我们并没有被给予对它们的直观（这也是不可能要求的），所以通过这种承认它们的实在性，任何综合命题都是不可能的。因此，这种开拓对我们在思辨意图中毫无帮助，但在纯粹理性的实践使用方面，确实有助于扩展我们的认识。上述三个思辨理性的理念本身还不是认识；然而它们是（超验的）思想，其中没有任何不可能的东西。现在，通过一个必然的实践法则，作为实践理性为了使其客体成为可能所必需的条件，它们获得了客观实在性，即我们被指示它们有客体，但却无法表明其概念如何与客体相关，这仍然不是对这些客体的认识；因为通过此我们不能对它们进行任何综合判断，也不能理论地确定它们的应用，因此不能对它们进行任何理论理性的使用，而这实际上构成了对它们的所有思辨认识。然而，尽管如此，理论认识，虽然不是这些客体的认识，但理性总体上的认识，通过实践假设而被扩展了，因为这些假设确实给予了那些理念客体，使一个仅仅是问题的思想首次获得了客观实在性。因此，这不是对给定的超感性客体的认识的扩展，但确实是理论理性和对它们的认识在超感性方面的扩展，因为理性被迫承认存在这样的客体，但却无法更进一步确定它们，因此也不能扩展对这些客体的认识（现在这些客体从实践基础上给予，并且仅仅是为了实践使用），因此纯粹理论理性必须把这种增长完全归功于它的纯粹实践能力，对于它来说所有这些理念都是超验的且没有客体的。在这里，这三个理念变得内在的和构成性的，因为它们是使纯粹实践理性的必然客体（至善）成为可能的理由，而在没有这一点的情况下，它们是超验的，仅仅是思辨理性的调节原则，不是为了让它采纳经验之外的新客体，而是为了使它在经验中的使用更加完整。但是一旦理性拥有了这种增加，它作为思辨理性（实际上只是为了确保其实践使用）所进行的工作就是消极的，就是说它的工作不是以那些理念来扩展，而是借那些理念来澄清，一方面阻止作为迷信之源的拟人主义，或者凭借臆想的经验对那些概念所作的虚假扩展，另一方面防止狂热主义，它通过超感性直观或类似的感觉来承诺这些概念，这些都是纯粹理性实践使用的障碍，因此排除它们确实属于我们在实践意图中扩展认识的范畴，或者承认这与之矛盾，同时承认理性在思辨意图中通过此并未获得任何收益。
 
