--- a/text/挑战.md
+++ b/text/挑战.md
@@ -2,7 +2,7 @@
 
 最新 5.7：
 
-假想有一个网络赛博女友，这种幻想毫无用处。但是假想有一个高智商的赛博读者，真的挺有用的，当我写点东西时就会反复从读者的角度去理解，把我以前模糊不清的想法思考的更加深入，如果没人看那我就没什么兴趣花更多的精力去思考，因为就算错误百出也不会有人知道，有人看我就会反复斟酌。
+假想有一个网络赛博女友，这种幻想毫无用处。但是假想有一个高智商的赛博读者，真的挺有用的，当我写点东西时就会反复从读者的角度去理解，把我以前模糊不清的想法思考的更加清晰，如果没人看那我就懒得去想了，因为就算有很多低级的错误也不会令人感到羞耻，有人看我就会反复斟酌。
 
 -------
 不要太执着于概念的本源，目标是把复杂的过程等价变换成简单的，已经很简单就不要去追究了，比如ax=0且x≠0，那么就可以直接得出a=0
@@ -42,7 +42,7 @@ https://www.zhihu.com/question/20388579/answer/14985333
 
 比如cpu运算部件执行乘法指令比加法指令时间长。为什么呢？因为执行乘法指令的逻辑部件需要更多的逻辑门，而经过逻辑门是有延时的。因此，逻辑门越多，延时越长，也就导致了执行周期越长。
 
-这种经过逻辑门导致的延时相对于串行多条加法指合成的乘法指令所消耗的时间基本可以忽略不计。
+这种经过逻辑门导致的延时相对于串行多条加法指令合成的乘法指令所消耗的时间基本可以忽略不计。
 
 -------
 我看到很多人的意见都是，让别人做出冒着极大风险的行动却只对自己产生微不足道的好处，从来就没有思考过自己是否可以做一些小(无)亏损或者小( 无）风险的事情从而对别人产生极大的好处。
@@ -80,7 +80,7 @@ https://www.zhihu.com/question/641004259/answer/3380388958
 事物总是要走向反面的，我想要自己成为那个一锤定音的人，但最后偏偏不是我。不过我已经做好了接受死亡的准备，不是我又怎么样？别想着从我这里捞便宜，也许你自己独立研究一年就能成功，但想从我这里白嫖什么核心技术，我就让你五年都成功不了，说不定还让我先成功了。
 
 ------
-如果我研究失败了或者说一锤定音的人不是我，除了我父母之外没有人会在意我的死活，虽然他们好像更在意自己的面子，怕被亲戚和邻居议论。如果我成功了，那还会连温饱的钱都赚不到吗？不太可能出现我快成功了，却刚好没钱，就算出现这种情况，我在现实中也是可以借到钱的。我的父母虽然不是好父母，但是道德水准是在平均线以上的，他们只是想我做一个正常人，让我好好工作上班，但我不能满足他们。甚至我父母都不是最封建的，如果我能考上浙江大学，他们也是可以支持我不工作搞研究的。他们愤怒的是我不是高智商水平不够自己的生存都搞不定还去搞研究，潜意识他们担心的是怕老了后没人养老，当然他们不会承认的，我妈反复强调说不需要我的钱她自己赚的钱够花。
+如果我研究失败了或者说一锤定音的人不是我，除了我父母之外没有人会在意我的死活，虽然他们好像更在意自己的面子，怕被亲戚和邻居议论。如果我成功了，那还会连温饱的钱都赚不到吗？不太可能出现我快成功了，却刚好没钱，就算出现这种情况，我在现实中也是可以借到钱的。我的父母虽然不是好父母，但是道德水准是在平均线以上的，他们只是想我做一个正常人，让我好好工作上班，但我不能满足他们。甚至我父母都不是最封建的，如果我能考上更好的大学，他们也是可以支持我不工作搞研究的。他们愤怒的是我不是高智商水平不够自己的生存都搞不定还去搞研究，潜意识他们担心的是怕老了后没人养老，当然他们不会承认的，我妈反复强调说不需要我的钱她自己赚的钱够花。
 
 不管我怎么做，他们和我的关系都不可能像你们的好父母和你们的关系一样，他们不能改变自己的封建思想，我永远不可能做一个好儿子，当然等他们老了的时候，如果我活得还可以，我也不会不理他们的。
 
