--- a/text/收藏1.md
+++ b/text/收藏1.md
@@ -1,3 +1,12 @@
+
+《红楼梦》在哪里体现了反封建? - 璟穆庵的回答 <br>
+https://www.zhihu.com/question/648988202/answer/1903487207253190503
+
+璟穆庵：
+对开筛评论有意见的朋友请移步置顶帖
+谢邀 红楼梦反封建≠曹雪芹反封建 文学作品的内核和创作者的思想及创作初衷很多时候就是脱节的 比如所谓的盛唐气象，首先想到的就是李白 然而李白为了求官而写的那些刻意讴歌盛世的诗，很肉麻的，评价是很低的 相反，那些被看做盛世之音的诗篇，很多是在发牢骚，是在阴阳怪气地吐槽政府，是在郁郁不得志地唱反调 但这种唱反调的牢骚，能看出高亢的抗争…阅读全文​
+
+--------
 一个编制全军覆没和两个编制的数量的人挂了，哪个更心疼？ - 栗花落香奈乎的回答  <br>
 https://www.zhihu.com/question/1899528048937788327/answer/1903362353262761160
 
