--- a/text/看书.md
+++ b/text/看书.md
@@ -3,4 +3,4 @@
 
 这种理论理性的扩展并不是什么思辨的扩展，即不是为了在理论意图中对其进行积极使用。因为通过实践理性在这里所完成的，仅仅是那些概念是实在的【电磁场】，并且确实拥有其（可能的）客体，但同时我们并没有被给予对它们的直观（这也是不可能要求的），所以通过这种承认它们的实在性，并不能使任何综合命题成为可能。因此，这种开拓对我们在思辨意图中毫无帮助，但在纯粹理性的实践使用方面，确实有助于扩展我们的认识。上述三个思辨理性的理念本身还不是认识；然而它们是（超验的）思想，其中没有任何不可能的东西。现在，通过一个必然的实践法则，作为实践理性为了使其客体成为可能所必需的条件，它们获得了客观实在性，即我们被指示它们有客体，但却无法表明其概念如何与客体发生关系，这仍然不是关于这些客体的知识；因为通过此我们不能对它们进行任何综合判断【还需要科研工作者根据大量的科学实验构建出具有实用性的科学理论】，也不能理论地确定它们的应用，因而根本不能对它们作理性的任何理论运用，而理性的一切思辨知识真正说来就在于这种运用。然而，尽管如此，理论认识，虽然不是这些客体的知识，但理性总体上的认识，通过实践假设而被扩展了，因为这些假设确实给予了那些理念客体，使一个仅仅是悬拟的思想首次获得了客观实在性。因此，这不是对给定的超感性客体的知识的扩展，但确实是理论理性和对它们的认识在一般超感性方面的知识扩展，因为理性被迫承认存在这样的对象，但却无法更进一步规定它们【心灵感应？】，因此也不能扩展对这些客体的知识（现在这些客体从实践基础上给予，并且仅仅是为了实践使用），因此纯粹理论理性必须把这种增长完全归功于它的纯粹实践能力，对于它来说所有这些理念都是超验的且没有客体的。在这里，这三个理念就成了内在的和构成性的，因为它们是使纯粹实践理性的必要客体（至善）成为现实的可能根据，而在没有这一点的情况下，它们是超验的，仅仅是思辨理性的调节原则【信仰】，不是为了让它采纳经验之外的新客体，而是为了使它在经验中的使用更加完备。但是一旦理性拥有了这种增加，它作为思辨理性（实际上只是为了确保其实践使用）所进行的工作就是完整的【避免成为狭隘的经验论主义者】，就是说它的工作不是以那些理念来扩展，而是借那些理念来澄清，一方面阻止作为迷信之源的拟人主义，或者凭借臆想的经验对那些概念所作的虚假扩展【这其实就是指那些脱离了agi去研究哲学的人，同时也包括那些搞大模型的人】，另一方面防止狂热主义，它通过超感性直观或类似的感觉来承诺这些概念，这些都是纯粹理性实践使用的障碍，因此排除它们确实属于我们在实践意图中扩展认识的范畴，而与此并不矛盾的是，同时承认理性在思辨意图中通过此并未获得任何收益【其实我最近一年搞研究并没有太大的进展，我的主要精力都用在了澄清各种模糊的概念上】。
 
-对于理性在考虑任何客体时的每一种使用，都需要纯粹理性概念（范畴），没有它们就无法思考任何对象。这些概念只能被应用于理性的理论使用，即只能应用于同时为它们提供了直观（这始终是感性的）的类似认识，因此仅仅是为了通过它们来呈现可能经验的客体。然而，这里有理性的理念，它们在任何经验中都无法给出，这就是我必须通过范畴来思考的，以便认识它们。但这里并不关心这些理念客体的理论认识，而仅仅是关心它们总体上是否有客体。这种实在性是由纯粹实践理性提供的，在这方面，理论理性没有什么可做的，除了仅仅通过范畴来思考那些客体，这如我们已经明确指出的，完全可以做到，而无需依赖于直观（无论是感性的，还是超感性的），因为范畴在纯粹理性中是独立于并先于任何直观的，仅仅作为思考的能力，它们有其位置和起源，并且它们总是仅仅指向一个一般客体，无论它以何种方式给予我们。现在，就范畴而言，如果它们要被应用于那些理念，在直观中给出一个客体是不可能的；但是，通过实践理性在至善的概念中毫无疑问地提供的一个客体，确实确保了这样一个客体是真实存在的，因此，范畴作为一种纯粹的思维形式，在这里并不是空的，而是有意义的，从而保证了那些属于至善可能性的概念的实在性，而这种增加并不会导致以理论原则为依据的经验知识有丝毫扩展。
+对于理性在考虑任何客体时的每一种使用，都需要纯粹知性概念（范畴），没有它们就无法思考任何对象。这些概念只能被应用于理性的理论使用，即只能应用于同时为它们提供了直观（这始终是感性的）的这一类知识，因此仅仅是为了通过它们来呈现可能经验的客体。然而，这里有理性的理念，它们在任何经验中都无法给出，这就是我必须通过范畴来思考的，以便认识它们。但这里并不涉及这些理念客体的理论知识，而仅仅是关心它们总体上是否有客体这件事。这种实在性是由纯粹实践理性提供的，此时，理论理性还没有获得直观，仅仅通过范畴（或理论假设）来思考那些客体，正如我们已经明确指出的，是完全可以做到，而无需依赖于直观（无论是感性的，还是超感性的），因为范畴在纯粹理性中是独立于并先于任何直观的，仅仅作为思考的能力，它们有其位置和起源，并且它们总是仅仅指向一个一般客体，而不论它以何种方式被给予我们。现在，就范畴而言，如果它们要被应用于那些理念，在直观中给出一个客体是不可能的；但是，通过实践理性在至善的概念中毫无疑问地呈现出了一个客体，确保了这样一个客体是真实存在的，因此，范畴作为一种纯粹的思维形式，在这里并不是空洞的，而是有意义的，从而保证了那些属于至善可能性的概念的实在性，而这种增加并不会导致以理论原则为依据的经验知识有丝毫扩展。
