--- a/text/看书.md
+++ b/text/看书.md
@@ -1,6 +1,21 @@
 
+如今且说宝玉因被袭人找回房去，果见鸳鸯歪在床上看袭人的针线呢，见宝玉来了，便说道：“你往那里去了？老太太等着你呢，叫你过那边请大老爷的安去。还不快换了衣服走呢。”袭人便进房去取衣服。宝玉坐在床沿上，褪了鞋等靴子穿的工夫，回头见鸳鸯穿着水红绫子袄儿，青缎子背心，束着白绉绸汗巾儿，脸向那边低着头看针线，脖子上戴着花领子。宝玉便把脸凑在他脖项上，闻那香油气，不住用手摩挲，其白腻不在袭人之下，便猴上身去涎皮笑道：“好姐姐，把你嘴上的胭脂赏我吃了罢。”[庚辰侧批：胭脂是这样吃法。看官可经过否？]一面说着，一面扭股糖似的粘在身上。
+
+鸳鸯便叫道：“袭人，你出来瞧瞧。[庚辰侧批：不向宝玉说话，又叫袭人，鸳鸯亦是幻情洞天也。]你跟他一辈子，也不劝劝，还是这么着。”袭人抱了衣服出来，向宝玉道：“左劝也不改，右劝也不改，你到底是怎么样？你再这么着，[庚辰侧批：此五字内有深意深心。]这个地方可就难住了。”一边说，一边催他穿了衣服，同鸳鸯往前面来见贾母。见过贾母，出至外面，人马俱已齐备。刚欲上马，只见贾琏请安回来了，[庚辰侧批：一丝不漏。]正下马，二人对面，彼此问了两句话。只见旁边转出一个人来，[庚辰侧批：芸哥此处一现，后文不见突然。]“请宝叔安”。宝玉看时，只见这人容长脸，长挑身材，年纪只好十八九岁，生得着实斯文清秀，倒也十分面善，只是想不起是那一房的，[庚辰侧批：大族人众，毕真，有是理。]叫什么名字。贾琏笑道：“你怎么发呆，连他也不认得？他是后廊上住的五嫂子的儿子芸儿。”宝玉笑道：“是了，是了，我怎么就忘了。”因问他母亲好，这会子什么勾当。贾芸指贾琏道：“找二叔说句话。”宝玉笑道：“你倒比先越发出挑了，[庚辰侧批：何尝是十二三岁小孩语。]倒象我的儿子。”贾琏笑道：“好不害臊！人家比你大四五岁呢，就替你作儿子了？”宝玉笑道：“你今年十几岁了？”贾芸道：“十八岁。”
+
+原来这贾芸最伶俐乖觉，听宝玉这样说，便笑道：“俗语说的，‘摇车里的爷爷，拄拐的孙孙’。虽然岁数大，山高高不过太阳。只从我父亲没了，这几年也无人照管教导。[庚辰侧批：虽是随机而应，伶俐人之语，余却伤心。]如若宝叔不嫌侄儿蠢笨，认作儿子，就是我的造化了。”贾琏笑道：“你听见了？认儿子不是好开交的呢。”[庚辰侧批：是兄凑弟趣，可叹！]说着就进去了。宝玉笑道：“明儿你闲了，只管来找我，别和他们鬼鬼祟祟的。[庚辰侧批：何其堂皇正大之语。]这会子我不得闲儿。明儿你到书房里来，和你说天话儿，我带你园里顽耍去。”说着扳鞍上马，众小厮围随往贾赦这边来。
+
+见了贾赦，不过是偶感些风寒，先述了贾母问的话，然后自己请了安。贾赦先站起来回了贾母话，[庚辰侧批：一丝不乱。]次后便唤人来：“带哥儿进去太太屋里坐着。”宝玉退出，来至后面，进入上房。邢夫人见了他来，先倒站了起来请过贾母安，[庚辰侧批：一丝不乱。]宝玉方请安。[［好规矩。］]邢夫人拉他上炕坐了，方问别人好，又命人倒茶来。[庚辰侧批：好层次，好礼法，谁家故事？]一钟茶未吃完，只见那贾琮来问宝玉好。邢夫人道：“那里找活猴儿去！你那奶妈子死绝了，也不收拾收拾你，弄的黑眉乌嘴的，那里象大家子念书的孩子！”
+
+正说着，只见贾环、贾兰小叔侄两个也来了，请过安，邢夫人便叫他两个椅子上坐了。贾环见宝玉同邢夫人坐在一个坐褥上，邢夫人又百般摩挲抚弄他，早已心中不自在了，[庚辰侧批：千里伏线。]坐不多时，便和贾兰使眼色儿要走。贾兰只得依他，一同起身告辞。宝玉见他们要走，自己也就起身，要一同回去。邢夫人笑道：“你且坐着，我还和你说话呢。”宝玉只得坐了。邢夫人向他两个道：“你们回去，各人替我问你们各人母亲好。你们姑娘、姐姐妹妹都在这里呢，闹的我头晕，今儿不留你们吃饭了。”[庚辰侧批：明显薄情之至。]贾环等答应着，便出来回家去了。
+
+宝玉笑道：“可是姐姐们都过来了，怎么不见？”邢夫人道：“他们坐了一会子，都往后头不知那屋里去了。”宝玉道：“大娘方才说有话说，不知是什么话？”邢夫人笑道：“那里有什么话，不过是叫你等着，同你姊妹们吃了饭去。还有一个好玩的东西给你带回去玩。”娘儿两个说话，不觉早又晚饭时节。调开桌椅，罗列杯盘，母女姊妹们吃毕了饭。宝玉去辞贾赦，同姊妹们一同回家，见过贾母，王夫人等，各自回房安息。不在话下。[庚辰双行夹批：逐步一段为五鬼魇魔法作引。脂砚。]
+
+且说贾芸进去见了贾琏，因打听可有什么事情。贾琏告诉他：“前儿倒有一件事情出来，偏生你婶子再三求了我，[庚辰侧批：反说体面话，惧内人累累如是。]给了贾芹了。他许了我，说明儿园里还有几处要栽花木的地方，等这个工程出来，一定给你就是了。”贾芸听了，半晌说道：“既是这样，我就等着罢。叔叔也不必先在婶子跟前提我今儿来打听的话，[庚辰侧批：已得了主意了。]到跟前再说也不迟。”贾琏道：“提他作什么，[庚辰侧批：已被芸哥瞒过了。]我那里有这些工夫说闲话儿呢。明儿一个五更，还要到兴邑去走一趟，须得当日赶回来才好。你先去等着，后日起更以后你来讨信儿，来早了我不得闲。”说着便回后面换衣服去了。
+
+--------
 我们将直接应用于当前情况来回答这个问题，以避免过于抽象。——为了实践地扩展纯粹的认识，必须先验地给出一个意图，即一个目的作为客体（意志的客体），这个客体独立于所有神学原则，通过一个直接决定意志的（绝对的）命令，被表现为实践上必然的，这就是至善。然而，这是不可能的，除非假设三个理论概念（由于它们只是纯粹理性的概念，因此在理论途径上找不到相应的直观，也就是说，找不到客观实在性）：即自由、不朽和上帝。因此，通过要求一个世界中可能至善之实存的那个实践法则，假定了那些纯粹理论理性客体的可能性，即那些理论理性无法确保其客观实在性的客体；因此，纯粹理性的理论认识确实得到了增加，但这种增加仅仅在于那些对于理性来说原本是悬设的（仅仅可思考的）概念现在被断定为确实存在客体的概念，因为实践理性不可避免地需要它们的存在来实现其实践上绝对必然的客体，即至善的可能性，并且理论由此被授权假定它们。
 
-这种理论理性的扩展并不是什么思辨的扩展，即不是为了在理论意图中对其进行积极使用。因为通过实践理性在这里所完成的，仅仅是那些概念是实在的【电磁场】，并且确实拥有其（可能的）客体，但同时我们并没有被给予对它们的直观（这也是不可能要求的），所以通过这种承认它们的实在性，并不能使任何综合命题成为可能。因此，这种开拓对我们在思辨意图中毫无帮助，但在纯粹理性的实践使用方面，确实有助于扩展我们的认识。上述三个思辨理性的理念本身还不是认识；然而它们是（超验的）思想，其中没有任何不可能的东西。现在，通过一个必然的实践法则，作为实践理性为了使其客体成为可能所必需的条件，它们获得了客观实在性，即我们被指示它们有客体，但却无法表明其概念如何与客体发生关系，这仍然不是关于这些客体的知识；因为通过此我们不能对它们进行任何综合判断【还需要科研工作者根据大量的科学实验构建出具有实用性的科学理论】，也不能理论地确定它们的应用，因而根本不能对它们作理性的任何理论运用，而理性的一切思辨知识真正说来就在于这种运用。然而，尽管如此，理论认识，虽然不是这些客体的知识，但理性总体上的认识，通过实践假设而被扩展了，因为这些假设确实给予了那些理念客体，使一个仅仅是悬拟的思想首次获得了客观实在性。因此，这不是对给定的超感性客体的知识的扩展，但确实是理论理性和对它们的认识在一般超感性方面的知识扩展，因为理性被迫承认存在这样的对象，但却无法更进一步规定它们【心灵感应？】，因此也不能扩展对这些客体的知识（现在这些客体从实践基础上给予，并且仅仅是为了实践使用），因此纯粹理论理性必须把这种增长完全归功于它的纯粹实践能力，对于它来说所有这些理念都是超验的且没有客体的。在这里，这三个理念就成了内在的和构成性的，因为它们是使纯粹实践理性的必要客体（至善）成为现实的可能根据，而在没有这一点的情况下，它们是超验的，仅仅是思辨理性的调节原则【信仰】，不是为了让它采纳经验之外的新客体，而是为了使它在经验中的使用更加完备。但是一旦理性拥有了这种增加，它作为思辨理性（实际上只是为了确保其实践使用）所进行的工作就是完整的【避免成为狭隘的经验论主义者】，就是说它的工作不是以那些理念来扩展，而是借那些理念来澄清，一方面阻止作为迷信之源的拟人主义，或者凭借臆想的经验对那些概念所作的虚假扩展【这其实就是指那些脱离了agi去研究哲学的人，同时也包括那些搞大模型的人】，另一方面防止狂热主义，它通过超感性直观或类似的感觉来承诺这些概念，这些都是纯粹理性实践使用的障碍，因此排除它们确实属于我们在实践意图中扩展认识的范畴，而与此并不矛盾的是，同时承认理性在思辨意图中通过此并未获得任何收益【其实我最近一年搞研究并没有太大的进展，我的主要精力都用在了澄清各种模糊的概念上】。
+这种理论理性的扩展并不是什么思辨的扩展，即不是为了在理论意图中对其进行积极使用。因为通过实践理性在这里所完成的，仅仅是那些概念是实在的【电磁场】，并且确实拥有其（可能的）客体，但同时我们并没有被给予对它们的直观（这也是不可能要求的），所以通过这种承认它们的实在性，并不能使任何综合命题成为可能。因此，这种开拓对我们在思辨意图中毫无帮助，但在纯粹理性的实践使用方面，确实有助于扩展我们的认识。上述三个思辨理性的理念本身还不是认识；然而它们是（超验的）思想，其中没有任何不可能的东西。现在，通过一个必然的实践法则，作为实践理性为了使其客体成为可能所必需的条件，它们获得了客观实在性，即我们被指示它们有客体，但却无法表明其概念如何与客体发生关系，这仍然不是关于这些客体的知识；因为通过此我们不能对它们进行任何综合判断【还需要科研工作者根据大量的科学实验构建出具有实用性的科学理论】，也不能理论地确定它们的应用，因而根本不能对它们作理性的任何理论运用，而理性的一切思辨知识真正说来就在于这种运用。然而，尽管如此，理论认识，虽然不是这些客体的知识，但理性总体上的认识，通过实践假设而被扩展了，因为这些假设确实给予了那些理念客体，使一个仅仅是悬拟的思想首次获得了客观实在性。因此，这不是对给定的超感性客体的知识的扩展，但确实是理论理性和对它们的认识在一般超感性方面的知识扩展，因为理性被迫承认存在这样的对象，但却无法更进一步规定它们【心灵感应？】，因此也不能扩展对这些客体的知识（现在这些客体从实践基础上给予，并且仅仅是为了实践使用），因此纯粹理论理性必须把这种增长完全归功于它的纯粹实践能力，对于它来说所有这些理念都是超验的且没有客体的。在这里，这三个理念就成了内在的和构成性的，因为它们是使纯粹实践理性的必要客体（至善）成为现实的可能根据，而在没有这一点的情况下，它们是超验的，仅仅是思辨理性的调节原则【信仰】，不是为了让它采纳经验之外的新客体，而是为了使它在经验中的使用更加完备。但是一旦理性拥有了这种增加，它作为思辨理性（实际上只是为了确保其实践使用）所进行的工作才是完整的【避免成为狭隘的经验论主义者】，就是说它的工作不是以那些理念来扩展，而是借那些理念来澄清，一方面阻止作为迷信之源的拟人主义，或者凭借臆想的经验对那些概念所作的虚假扩展【这其实就是指那些脱离了agi去研究哲学的人，同时也包括那些搞大模型的人】，另一方面防止狂热主义，它通过超感性直观或类似的感觉来承诺这些概念，这些都是纯粹理性实践使用的障碍，因此排除它们确实属于我们在实践意图中扩展认识的范畴，而与此并不矛盾的是，同时承认理性在思辨意图中通过此并未获得任何收益【其实我最近一年搞研究并没有太大的进展，我的主要精力都用在了澄清各种模糊的概念上】。
 
 对于理性在考虑任何客体时的每一种使用，都需要纯粹知性概念（范畴），没有它们就无法思考任何对象。这些概念只能被应用于理性的理论使用，即只能应用于同时为它们提供了直观（这始终是感性的）的这一类知识，因此仅仅是为了通过它们来呈现可能经验的客体。然而，这里有理性的理念，它们在任何经验中都无法给出，这就是我必须通过范畴来思考的，以便认识它们。但这里并不涉及这些理念客体的理论知识，而仅仅是关心它们总体上是否有客体这件事。这种实在性是由纯粹实践理性提供的，此时，理论理性还没有获得直观，仅仅通过范畴（或理论假设）来思考那些客体，正如我们已经明确指出的，是完全可以做到，而无需依赖于直观（无论是感性的，还是超感性的），因为范畴在纯粹理性中是独立于并先于任何直观的，仅仅作为思考的能力，它们有其位置和起源，并且它们总是仅仅指向一个一般客体，而不论它以何种方式被给予我们。现在，就范畴而言，如果它们要被应用于那些理念，在直观中给出一个客体是不可能的；但是，通过实践理性在至善的概念中毫无疑问地呈现出了一个客体，确保了这样一个客体是真实存在的，因此，范畴作为一种纯粹的思维形式，在这里并不是空洞的，而是有意义的，从而保证了那些属于至善可能性的概念的实在性，而这种增加并不会导致以理论原则为依据的经验知识有丝毫扩展。
