--- a/text/收藏1.md
+++ b/text/收藏1.md
@@ -1,4 +1,15 @@
 
+解读《石头记》第24回3：贾宝玉当官 - 红楼正史的文章  <br>
+https://zhuanlan.zhihu.com/p/620148041
+
+清代“坐褥”是权利和身份的象征。宝玉同邢夫人坐在一个坐褥上，伏贾宝玉继承家业。
+贾环映射曹宣第三子曹颀。贾兰指尚未出生的曹雪芹。曹氏家产和官职与他二人无缘。伏线第二十五回“宝玉凤姐叔嫂逢五鬼”，贾环争家产。
+
+《红楼正史》之红学、脂批和《石头记》版本 - 红楼正史的文章 <br>
+https://zhuanlan.zhihu.com/p/454298586
+
+红学按时间划分为旧红学、新红学、当代红学三个时期；按研究方向划分为评论派、考证派、索隐派、创作派四大学派，各派又细化为若干分支，主要包括题咏、评点、鉴赏、百科、批评、曹学、版本学、本事学、脂学、探佚学等等 。
+
 《红楼梦》在哪里体现了反封建? - 璟穆庵的回答 <br>
 https://www.zhihu.com/question/648988202/answer/1903487207253190503
 
