--- a/text/收藏1.md
+++ b/text/收藏1.md
@@ -1,3 +1,29 @@
+为何《红楼梦》又名《风月宝鉴》？  <br>
+https://www.zhihu.com/question/25725622/answer/63731017
+
+匿名用户:
+其实风月宝鉴这个名字虽然不比红楼梦更具有朦胧美感，却是非常切题的。
+因为红楼里的年青一代人全部都是死于风月。
+冯子渊，因为和薛蟠争夺香菱，被殴打而死。
+贾瑞，因为看上凤姐被殴打后发病，直接死于风月宝鉴（镜子）神器。
+张金哥，殉情而死。
+秦可卿，因为和公公有不伦关系，上吊自杀。
+鲍二家的，因为和贾琏偷情被凤姐发现，上吊自杀。
+金钏，因为被王夫人认定勾引宝玉，跳井自杀。
+晴雯，因为被王夫人认定勾引宝玉，撵走病死。
+尤二姐，因为和凤姐抢夺丈夫，失败，吞金而死。
+尤三姐，因为柳湘莲想要悔婚，拔剑自刎。
+贾迎春，丈夫家暴虐待而死。
+
+《红楼梦》为何又名为《风月宝鉴》？曹雪芹的苦心读懂的人不多<br>
+https://news.qq.com/rain/a/20200406A0JW4G00
+
+其实你们所指应该是我们这些读者，我们读的是正是这风月宝鉴。作者也借此告诉我们以假为真，认为《红楼梦》仅是一本写男女情爱的“淫书”，就要销毁它，是因为误读了《红楼梦》，其实它是一本告诫读者不要痴迷世间“好”的书。
+
+《红楼梦》为什么又叫《风月宝鉴》？曹公在原文中都给出了答案<br>
+https://news.qq.com/rain/a/20230223A01HVB00
+
+文本所谓的题《风月宝鉴》的东鲁孔梅溪一一东鲁原指春秋鲁国，因至圣先师孔子出生鲁国，亦指孔子，暗示虽然风月宝鉴正面“大旨谈情”，但背面真的与支撑封建社会的思想体系一一儒家学说的家国天下有关；孔梅溪，姓氏与孔子直通，其谐音“恐没细”，或许也暗示作者担心读者不“细心体贴”，泛泛读过，从而与“其中味”失之交臂。
 
 解读《石头记》第24回3：贾宝玉当官 - 红楼正史的文章  <br>
 https://zhuanlan.zhihu.com/p/620148041
