--- a/text/挑战.md
+++ b/text/挑战.md
@@ -7,7 +7,7 @@ https://www.zhihu.com/question/627753488/answer/1904118541860475238
 
 实践出真知：因为当下大部分人不会休息，长期神经疲劳且不自知。 就是说，大部分人对神经疲劳没有概念。 有以下特征反应的都属于神经疲劳。 注意力难以集中：难以将注意力集中在日常活动或工作上，容易分心。 记忆力减退：感觉记忆力不如以前，容易忘事。举个例子，早晨开了个30分钟的会，你下午上班期间休息的时候你把上午开会内容按顺序复述一遍要点。很多人…阅读全文
 
-深度关注我的注意了，我这里发的东西基本可以肯定会对你们的记忆力造成很大程度的衰退，可能会严重影响你们的工作。我现在的记忆力已经差到十分钟前想的东西都有可能想不起来，所以想到什么好的东西要赶紧记笔记。我现在在搞研究，由于大脑容量太小了，所以我通过完全牺牲自己的记忆力、计算力、反应力来换取更丰富的想象力和感知力，这也是没办法的事情，对于你们来说这样做不知道值不值，要考虑清楚了。
+深度关注我的注意了，我这里发的东西基本可以肯定会对你们的记忆力造成很大程度的衰退，可能会严重影响你们的工作。我现在的记忆力已经差到十分钟前想的东西都有可能记不起来，所以想到什么好的东西要赶紧记下来。我现在在搞研究，由于大脑容量太小了，所以我通过完全牺牲自己的记忆力、计算力、反应力来换取更丰富的想象力和感知力，这也是没办法的事情，对于你们来说这样做不知道值不值，要考虑清楚了。
 
 -------
 假想有一个网络赛博女友，这种幻想毫无用处。但是假想有一个高智商的赛博读者，真的挺有用的，当我写点东西时就会反复从读者的角度去理解，把我以前模糊不清的想法分析的更加清晰，如果没人看那我就懒得去想了，因为就算有很多低级的错误也不会令人感到羞耻，有人看我就会反复斟酌。
