--- a/text/挑战.md
+++ b/text/挑战.md
@@ -117,6 +117,8 @@ https://www.bilibili.com/video/BV1ft4113743/
 
 真实性不等于真实感，我认为日本、台湾拍的a片真实感很差，有些韩国的三级片真实感稍微好一点，其实看多了也会觉得很假。
 
+用ai感知摄像机来拍黄片那也太low了。
+
 --------
 既想要和这里爱我的人建立现实中的联系，又害怕过去在现实中认识的人来到这里，能分析出为什么吗？
 
