--- a/text/挑战.md
+++ b/text/挑战.md
@@ -117,7 +117,7 @@ https://www.bilibili.com/video/BV1ft4113743/
 
 真实性不等于真实感，我认为日本、台湾拍的a片真实感很差，有些韩国的三级片真实感稍微好一点，其实看多了也会觉得很假。
 
-ai感知摄像机除了拍黄片还可以拍电视剧。
+ai感知摄像机除了拍黄片还可以拍电视剧，可以拍出你最喜欢的电视剧，而不用看别人喂给你的电视剧。
 
 --------
 既想要和这里爱我的人建立现实中的联系，又害怕过去在现实中认识的人来到这里，能分析出为什么吗？
