--- a/text/挑战.md
+++ b/text/挑战.md
@@ -2,6 +2,9 @@
 
 最新 5.9：
 
+太平天国和义和团运动是叛乱。
+
+------
 上班一整天没事干，为什么还是觉得很累？ - 实践出真知的回答  <br>
 https://www.zhihu.com/question/627753488/answer/1904118541860475238
 
