--- a/text/挑战.md
+++ b/text/挑战.md
@@ -2,6 +2,11 @@
 
 最新 5.9：
 
+脂砚斋应该就是曹雪芹，但是曹雪芹无法做到凭空想象一个脂砚斋，必定在现实中有一个像脂砚斋的人在和曹雪芹互动。
+
+现在deepseek已经有曹雪芹的水平了吗？
+
+-------
 太平天国是叛乱，义和团运动也是叛乱。
 
 ------
