--- a/text/挑战.md
+++ b/text/挑战.md
@@ -2,6 +2,9 @@
 
 最新 5.9：
 
+如果历史是生成的，那么生成历史的东西又是什么？历史必定是在那里的，所以不可能是人的想象力生成历史，只能说人的想象力来源于历史。
+
+-------
 脂砚斋应该就是曹雪芹，但是曹雪芹无法做到凭空想象一个脂砚斋，必定在现实中有一个像脂砚斋的人在和曹雪芹互动。
 
 现在deepseek已经有曹雪芹的水平了吗？deepseek的想象力应该要比曹雪芹强吧。
