--- a/text/挑战.md
+++ b/text/挑战.md
@@ -4,7 +4,7 @@
 
 如果历史是生成的，那么生成历史的东西又是什么？历史必定是在那里的，所以不可能是人的想象力生成历史，只能说人的想象力来源于历史。
 
-由此可以得出什么心灵感应纯粹是无稽之谈，有些巧合仅仅只是自然界物质运动的偶然碰撞而已，这种碰撞没有概率论里说的那么随机，而是存在一定规律的。
+由此可以得出什么心灵感应纯粹是无稽之谈，有些巧合仅仅只是自然界物质运动的偶然碰撞而已，只是这种碰撞没有概率论里说的那么随机，而是存在一定规律的。
 
 -------
 脂砚斋应该就是曹雪芹，但是曹雪芹无法做到凭空想象一个脂砚斋，必定在现实中有一个像脂砚斋的人在和曹雪芹互动。
