--- a/text/挑战.md
+++ b/text/挑战.md
@@ -2,6 +2,9 @@
 
 最新 5.9：
 
+不好意思，密码颠倒了。
+
+------
 如果历史是生成的，那么生成历史的东西又是什么？历史必定是在那里的，所以不可能是人的想象力生成历史，只能说人的想象力来源于历史。
 
 由此可以得出什么心灵感应纯粹是无稽之谈，有些巧合仅仅只是自然界物质运动的偶然碰撞而已，只是这种碰撞没有概率论里说的那么随机，而是存在一定规律的。
