--- a/text/挑战.md
+++ b/text/挑战.md
@@ -1,8 +1,8 @@
 2025年挑战：逃避没用，不把最硬的骨头给啃下来，不可能研究出什么实质性的突破。
 
-最新 5.9：
+最新 5.10：
 
-不好意思，密码颠倒了。
+有一段比较关键的漏掉了。
 
 ------
 如果历史是生成的，那么生成历史的东西又是什么？历史必定是在那里的，所以不可能是人的想象力生成历史，只能说人的想象力来源于历史。
