--- a/text/看书.md
+++ b/text/看书.md
@@ -1,4 +1,84 @@
 
+　　现在，他舒适地伏在甲板上，让五月温暖的阳光，晒着他宽阔的、赤裸着的、古铜色的背。 <br>
+　　海风温暖而潮湿，从船舷穿过，吹起了他漆黑的头发，坚实的手臂伸在前面，修长而有力的手指，握着的是个晶莹而滑润的白玉美人。 <br>
+　　他却似已在海洋的怀抱里入睡。 <br>
+　　这是艘精巧的三桅船，洁白的帆，狭长的船身，坚实而光润的木质，给人一种安定、迅速而华丽的感觉。 <br>
+　　这是初夏，阳光灿烂，海水湛蓝，海鸥轻巧地自船桅间滑过，生命，是多彩的，充满了青春的欢乐。 <br>
+　　海天辽阔，远处的地平线已只剩下一片朦胧的灰影，这里是他自己的世界，绝不会有他厌恶的访客。 <br>
+　　船舱的门是开着的，舱下不时有娇美的声音传来。 <br>
+　　然后，一个美丽的少女走上甲板，她穿着件宽大而舒服的鲜红衣裳，秀发松松地挽起，露出双晶莹、修长的玉腿，赤着纤秀的、完美无疵的双足，轻盈地走过甲板，走到他身旁，轻轻用足趾去搔他的脚心，面上绽开了甜蜜妩媚的微笑，就好像百花俱在这一刹那里开放。 <br>
+　　他缩起腿，轻叹道：“甜儿，你难道永远不能安静一会儿么？” <br>
+　　语声低沉，充满了煽动的吸引力。 <br>
+　　她银铃般娇笑起来，道：“你终于猜错了。” <br>
+　　他懒洋洋地翻了个身，阳光，便照在他脸上。 <br>
+　　他双眉浓而长，充满粗犷的男性魅力，但那双清澈的眼睛，却又是那么秀逸，他鼻子挺直，象征着坚强、决断的铁石心肠，他那薄薄的、嘴角上翘的嘴，看来也有些冷酷，但只要他一笑起来，坚强就变作温柔，冷酷也变作同情，就像是温暖的春风，吹过了大地。 <br>
+　　他抬手挡住刺眼的阳光，眨着眼睛笑了，目中闪动着顽皮、幽默的光芒，却又充满了机智。 <br>
+　　他眨着眼睛笑道：“李红袖姑娘，看在老天的分上，你莫要也变得如此调皮好么，有了个宋甜儿，我难道还不够受？” <br>
+　　李红袖笑得弯了腰，却忍住笑道：“楚留香大少爷，除了宋甜儿外，别人就不能顽皮一下么？” <br>
+　　楚留香拍着身旁的甲板，道：“乖乖地坐下来，陪我晒晒太阳，讲个故事给我听，要开心的故事，要有快乐的结局，这世上的悲惨之事已够多了。” <br>
+　　李红袖咬着嘴唇，道：“我偏不坐下来，偏不讲故事，我也不要晒太阳……这见鬼的太阳，晒得人头晕，我真不懂你为什么会喜欢？” <br>
+　　她说“偏不坐下来”时，人已坐了下来，她说“不要晒太阳”，却已在阳光下伸展了双腿。 <br>
+　　楚留香笑道：“晒太阳有什么不好？一个人若能多晒晒太阳，就不会做卑鄙无耻的事，无论是谁，在这么可爱的阳光下，都想不出坏主意来的。” <br>
+　　李红袖眼波流转，道：“我现在就正在想个坏主意。” <br>
+　　楚留香道：“你正在想该使个什么法子让我爬起来去做事，是么？” <br>
+　　李红袖格格娇笑道：“你真是个鬼，什么事都瞒不过你。” <br>
+　　她笑声渐渐停止，又道：“但你也真该起来做做事了，自从京城回来后，你就连动都不想动，再这样懒下去，你就要变成流氓了。” <br>
+　　楚留香故意叹了口气，道：“你真像我小时读书的老师，只少了两撇胡子。” <br>
+　　李红袖狠狠瞪了他一眼，楚留香展颜一笑，又道：“这次在京城，我可真见识了不少那些所谓成名英雄的嘴脸，除了秃鹰那老头儿还有两下外，别人全是饭桶，那生死判崔能据说武功不弱，手中一对判官笔，据说能打遍人身二百一十八处穴道，但我就从他身旁掠过，他却依然在做梦似的。” <br>
+　　李红袖撇着嘴道：“楚大少爷的轻功天下无双，江湖中人谁不知道……但楚大少爷，你的牛已吹完了么？” <br>
+　　楚留香道：“吹完了，李姑娘有何吩咐？” <br>
+　　李红袖道：“我先说几件事给你听。” <br>
+　　她自宽大的衣袖中取出个小小的簿子，一面翻看，一面念着道：“上次你从济南取来的一批货，已卖了三十万两，除了救济‘龙虎镖局’王镖头遗孀的一万两，趟子手张、赵两人家眷各五千两外，还替黄秀才付了一千两丧葬费，又替赵立正付了一千五百两喜酒聘礼，替郑……” <br>
+　　楚留香叹道：“这些事我难道不知道么？” <br>
+　　李红袖白了他一眼，道：“总之，三十万两都已分配出去了，你自己田庄里收来的五万两，我也替你用出去四万。” <br>
+　　楚留香苦笑道：“姑娘，你难道不能为我多留些么？” <br>
+　　李红袖道：“你享受得还不够？江湖中已有不少人在说你的闲话了，别人可不知道你花的都是你自己的，都说你假公济私……” <br>
+　　楚留香皱眉道：“别人如何说，和咱们又有何关系？人活在世上，为什么不能享受享受，为什么定要受苦，你怎地也变得俗了？” <br>
+　　李红袖嫣然一笑，道：“我可没要你受苦，我只是……” <br>
+　　突听舱下唤道：“你两个系处倾乜嘢唧？唔想吃饭啦？” <br>
+　　南国姑娘甜美的言语，听来当真别有一种风情，别有一般滋味。李红袖却高举了双手，笑道：“老天，她难道不能说说别人听得懂的话么？” <br>
+　　楚留香笑道：“你也莫要怪她，她辛辛苦苦做了饭菜，却没人去吃，也难怪她生气，人一生气时，家乡话就出来了。” <br>
+　　他像是根本没有动，却已拉着李红袖站了起来。 <br>
+　　李红袖故意娇嗔道：“你什么事都向着甜儿，所以她才会……” <br>
+　　一句话未说完，脸色突然变了，失声道：“你瞧，你瞧那是什么？” <br>
+
+×　　　　　　×　　　　　　×
+
+　　阳光照耀的海面上，竟漂来了一个人—— <br>
+　　一具死尸！ <br>
+　　楚留香一转身已到了船舷旁，抄起条绳索，打了个活结，轻轻一抛，长绳便像箭一般笔直地飞了出去。 <br>
+　　长绳也似长着眼睛，不偏不倚，套着了尸身。 <br>
+　　这尸身穿的是昂贵的锦缎衣裳，腰畔挂着翡翠的鼻烟壶，黝黑的脸已被海水泡得浮肿起来。 <br>
+　　楚留香将他平放在甲板上，摇头道：“无救了。” <br>
+　　李红袖却瞧着这尸身的一双手，他左手的中指与无名指上，套着三个奇特的精钢乌金戒指。 <br>
+　　那只右手虽没有戒指，却有戴过戒指的痕迹。 <br>
+　　李红袖皱眉道：“七星飞环！这人莫非是‘天星帮’的门下？” <br>
+　　楚留香道：“非但是天星门下，此人正是‘天星帮’的总瓢把子‘七星夺魂’左又铮，但‘天星帮’一向盘踞在皖南，不知他怎会死在这里？” <br>
+　　李红袖道：“他身上没有伤痕，莫非是淹死的？” <br>
+　　楚留香摇了摇头，解开他衣襟，只见他左胸第五根肋骨下，“乳根”与“期门”穴之间，赫然留着个紫红掌印。 <br>
+　　李红袖叹了口气，道：“朱砂掌。” <br>
+　　楚留香道：“朱砂掌一门近年虽然人才鼎盛，门下弟子号称已有一百七十多个，但能置‘七星夺魂’于死地的，最多也不会超过三个。” <br>
+　　李红袖道：“嗯，冯、杨、西门这三人武功只怕是要比左又铮强些。” <br>
+　　楚留香道：“朱砂门与天星帮可有什么恩怨？” <br>
+　　李红袖想了想，道：“三十七年前天星帮的刑堂香主，娶了当时朱砂掌门人冯风的二女儿，两年后这位冯姑娘突然死了，冯风曾亲赴皖南兴师问罪，后来虽查明他女儿实是急病而死，但两家却从此不相往来。” <br>
+　　楚留香道：“还有呢？” <br>
+　　李红袖道：“二十六……也许是二十五年前天星帮曾劫了朱砂门弟子所保的一趟镖，那时正值冯风病故，朱砂重选掌门的时候，所以这件事直拖了一年，后来天星帮劫镖的弟子虽也曾登门负荆，但镖银却始终未曾送还。” <br>
+　　她将这些发生在二十多年前的武林故事娓娓道来，竟是像在说着自己身边的家常琐事似的。 <br>
+　　楚留香微笑道：“你的记忆，的确从来不会令人失望……但这些事都已事过境迁，而且也算不得是什么深仇大恨，朱砂门想来不会为了这种事将左又铮一路追踪到这里，再下毒手，这其中必定另有缘故。” <br>
+　　突然一个少女自舱下冲了上来，娇嗔道：“你两个究竟系处做乜嘢唧？” <br>
+　　她也穿着件宽大而舒服的衣裳，却是鹅黄色的，也露出一双淡褐色的，均匀美丽、线条柔和的玉腿。 <br>
+　　她漆黑的头发梳了两根长长的辫子，长长的辫子随着玲珑的娇躯不住荡来荡去，淡褐色的瓜子脸，配着双黑白分明的大眼睛，显得又妩媚，又俏皮。她脸上本在故意装作娇嗔，但瞧见这死尸，突然惊呼一声，扭转头就跑，跑得比来的时候还要快得多。 <br>
+　　李红袖笑道：“甜儿无论做什么事胆子都很大，但只要一瞧见死人，就骇得要命，所以我常说活人谁也制不住她，只有死人，才制得住她。” <br>
+　　楚留香凝注着海天深处，缓缓道：“你等着瞧吧，今天要从那边漂来的死尸，绝不止这一个。” <br>
+　　李红袖眼波转动，还未说话，只见舱门里已伸出一双纤秀的手来，手里托着个大盘子。 <br>
+　　盘子有两只烤得黄黄的乳鸽，配着两片柠檬，几片多汁的牛肉，半只白鸡，一条蒸鱼，还有一大碗浓浓的番茄汤，两盅腊味饭，一满杯紫红色的葡萄酒，杯子外凝结着水珠，像是已冰过许久。 <br>
+　　宋甜儿那甜笑的语声却在舱门里唤道：“喂，快的来攞呀！” <br>
+　　李红袖笑道：“我听不懂，你为什么不自己送上来？” <br>
+　　宋甜儿啐道：“小鬼，你听不懂怎会知道我要你来拿？” <br>
+　　她说的是纯粹的京片子，但唧唧哝哝，软语娇柔，却别有一番情趣。 <br>
+　　李红袖拍掌娇笑道：“来听呀，我们的甜姑娘终于说官话了。”
+
+------
 如今且说宝玉因被袭人找回房去，果见鸳鸯歪在床上看袭人的针线呢，见宝玉来了，便说道：“你往那里去了？老太太等着你呢，叫你过那边请大老爷的安去。还不快换了衣服走呢。”袭人便进房去取衣服。宝玉坐在床沿上，褪了鞋等靴子穿的工夫，回头见鸳鸯穿着水红绫子袄儿，青缎子背心，束着白绉绸汗巾儿，脸向那边低着头看针线，脖子上戴着花领子。宝玉便把脸凑在他脖项上，闻那香油气，不住用手摩挲，其白腻不在袭人之下，便猴上身去涎皮笑道：“好姐姐，把你嘴上的胭脂赏我吃了罢。”[庚辰侧批：胭脂是这样吃法。看官可经过否？]一面说着，一面扭股糖似的粘在身上。
 
 鸳鸯便叫道：“袭人，你出来瞧瞧。[庚辰侧批：不向宝玉说话，又叫袭人，鸳鸯亦是幻情洞天也。]你跟他一辈子，也不劝劝，还是这么着。”袭人抱了衣服出来，向宝玉道：“左劝也不改，右劝也不改，你到底是怎么样？你再这么着，[庚辰侧批：此五字内有深意深心。]这个地方可就难住了。”一边说，一边催他穿了衣服，同鸳鸯往前面来见贾母。见过贾母，出至外面，人马俱已齐备。刚欲上马，只见贾琏请安回来了，[庚辰侧批：一丝不漏。]正下马，二人对面，彼此问了两句话。只见旁边转出一个人来，[庚辰侧批：芸哥此处一现，后文不见突然。]“请宝叔安”。宝玉看时，只见这人容长脸，长挑身材，年纪只好十八九岁，生得着实斯文清秀，倒也十分面善，只是想不起是那一房的，[庚辰侧批：大族人众，毕真，有是理。]叫什么名字。贾琏笑道：“你怎么发呆，连他也不认得？他是后廊上住的五嫂子的儿子芸儿。”宝玉笑道：“是了，是了，我怎么就忘了。”因问他母亲好，这会子什么勾当。贾芸指贾琏道：“找二叔说句话。”宝玉笑道：“你倒比先越发出挑了，[庚辰侧批：何尝是十二三岁小孩语。]倒象我的儿子。”贾琏笑道：“好不害臊！人家比你大四五岁呢，就替你作儿子了？”宝玉笑道：“你今年十几岁了？”贾芸道：“十八岁。”
