--- a/text/挑战.md
+++ b/text/挑战.md
@@ -2,6 +2,9 @@
 
 最新 5.10：
 
+之所以现在新拍的烂片有很多人看，是因为大家喜欢很多人一起看剧的氛围感。一个人看老剧没啥意思，但是如果有很多人一起看那就很有氛围了，要是再营造出一些相关的花絮，那就感觉和看新片一样。人数不用太多，几个人的小圈子快乐就行了，人太多了并不会增加体验，反而可能带来很多负面影响。
+
+-------
 有2段比较关键的漏掉了。
 
 ------
