--- a/text/收藏1.md
+++ b/text/收藏1.md
@@ -1,7 +1,9 @@
 十余年慢性鼻炎患者的中医诊治 - 小中医的文章 <br>
 https://zhuanlan.zhihu.com/p/647606514
 
-辛夷花煎药的时候要后下。
+“辛夷花煎药的时候要后下。”  
+
+没注意，我都是一起煎的。关于辛夷花的配方就是我之前说，不过我不是一直喝的，偶尔煎药看心情，每种5~10g，煎了后早晚各一碗。
 
 辛夷花对鼻炎有实质性的作用吗？ - Brown Frozen的回答  <br>
 https://www.zhihu.com/question/23108156/answer/1666057635
