--- a/text/挑战.md
+++ b/text/挑战.md
@@ -2,6 +2,18 @@
 
 最新 5.10：
 
+我对ai编程的思考 - 牛马梦想家的文章  <br>
+https://zhuanlan.zhihu.com/p/1903220595585422984
+
+“体验就是一旦当代码复杂度达到一个值后，使用ai生成的代码就会报错，而且让你改的怀疑人生”
+
+“通过这种设计方式，哪怕是不会写代码的人，也能用自然语言一步步完成软件构建。”
+
+我的幻想是，以后的软件复杂度比浏览器还复杂10倍，agi处理起来还是思路清晰游刃有余，甚至能根据需求重新设计架构，人类的顶级程序却力不从心大脑一片混乱，改一行代码都显得很吃力的样子。
+
+一个手机里的计算器在做各种特定计算的时候早就已经超过了最顶尖的人类，编译器把代码编译成二进制的速度和准确度也超过了最顶尖的汇编程序员，计算器和编译器算什么asi？
+
+------
 之所以现在新拍的烂片有很多人看，是因为大家喜欢很多人一起看剧的氛围感。一个人看老剧没啥意思，但是如果有很多人一起看那就很有气氛了，要是再营造出一些相关的花絮就更好了，那就感觉和看新片一样。人数不用太多，几个人的小圈子快乐就行了，人太多了并不会增加体验，反而可能带来很多负面影响。
 
 -------
