--- a/text/挑战.md
+++ b/text/挑战.md
@@ -9,7 +9,7 @@ https://zhuanlan.zhihu.com/p/1903220595585422984
 
 “通过这种设计方式，哪怕是不会写代码的人，也能用自然语言一步步完成软件构建。”
 
-我的幻想是，以后的软件复杂度比浏览器还复杂10倍，agi处理起来还是思路清晰游刃有余，甚至能根据需求重新设计架构，人类的顶级程序却力不从心大脑一片混乱，改一行代码都显得很吃力的样子。
+我的幻想是，以后的软件复杂度比浏览器还复杂10倍，agi处理起来还是思路清晰游刃有余，甚至能根据需求重新设计架构，人类的顶级程序员却力不从心大脑一片混乱，改一行代码都显得很吃力的样子。
 
 一个手机里的计算器在做各种特定计算的时候早就已经超过了最顶尖的人类，编译器把代码编译成二进制的速度和准确度也超过了最顶尖的汇编程序员，计算器和编译器算什么asi？
 
