--- a/text/挑战.md
+++ b/text/挑战.md
@@ -1,7 +1,10 @@
 2025年挑战：逃避没用，不把最硬的骨头给啃下来，不可能研究出什么实质性的突破。
 
-最新 5.10：
+最新 5.11：
 
+agi和那些脑子混乱的人类交流应该是这样的，根据这个人的胡言乱语和当前所处的应用场景，猜测出一些大概的意思，然后慢慢引导这些人把他们的想法和需求表述的更加清晰。前提是这个人的智商不是太低，至少不是那种不可理喻的脑残。
+
+-----
 我对ai编程的思考 - 牛马梦想家的文章  <br>
 https://zhuanlan.zhihu.com/p/1903220595585422984
 
