--- a/text/挑战.md
+++ b/text/挑战.md
@@ -2,6 +2,9 @@
 
 最新 5.11：
 
+
+
+------
 agi和那些脑子混乱的人类交流应该是这样的，根据这个人的胡言乱语和当前所处的应用场景，猜测出一些大概的意思，然后慢慢引导这些人把他们的想法和需求表述的更加清晰。前提是这个人的智商不是太低，至少不是那种不可理喻的脑残。
 
 -----
@@ -14,7 +17,7 @@ https://zhuanlan.zhihu.com/p/1903220595585422984
 
 我的幻想是，以后的软件复杂度比浏览器还复杂10倍，agi处理起来还是思路清晰游刃有余，甚至能根据需求重新设计架构，人类的顶级程序员却力不从心大脑一片混乱，改一行代码都显得很吃力的样子。
 
-一个手机里的计算器在做各种特定计算的时候早就已经超过了最顶尖的人类，编译器把代码编译成二进制的速度和准确度也超过了最顶尖的汇编程序员，计算器和编译器算什么asi？
+一个手机里的计算器在做各种特定计算的时候就已经超过了计算最快的人类，编译器把代码编译成二进制的速度和准确度也早就超过了最细心的翻译程序员，计算器和编译器算什么asi？
 
 ------
 之所以现在新拍的烂片有很多人看，是因为大家喜欢很多人一起看剧的氛围感。一个人看老剧没啥意思，但是如果有很多人一起看那就很有气氛了，要是再营造出一些相关的花絮就更好了，那就感觉和看新片一样。人数不用太多，几个人的小圈子快乐就行了，人太多了并不会增加体验，反而可能带来很多负面影响。
