--- a/text/收藏1.md
+++ b/text/收藏1.md
@@ -1,3 +1,8 @@
+
+大力出奇迹，未优化代码直接跑三天三夜 <br>
+https://www.zhihu.com/pin/1901660636167005467
+
+-------
 十余年慢性鼻炎患者的中医诊治 - 小中医的文章 <br>
 https://zhuanlan.zhihu.com/p/647606514
 
