--- a/text/挑战.md
+++ b/text/挑战.md
@@ -1,7 +1,12 @@
 2025年挑战：逃避没用，不把最硬的骨头给啃下来，不可能研究出什么实质性的突破。
 
-最新 5.11：
+最新 5.12：
 
+大家不要以为我有什么神奇的能力，我只是把符合我审美的材料东拼西凑在一起就成了这个样子，我摘的那些文字我是花10年时间也写不出来，用ai辅助也写不出。我不是创作者，我仅仅是一个欣赏者，如果说这里还有好处的话，就是有人陪你一起欣赏，享受一种代入的快感。
+
+那为什么要陪我呢？因为知乎的优秀创作者有很多，但像我这么用心欣赏的人就只有我一个。
+
+-----
 agi和那些脑子混乱的人类交流应该是这样的，根据这个人的胡言乱语和当前所处的应用场景，猜测出一些大概的意思，然后慢慢引导这些人把他们的想法和需求表述的更加清晰。前提是这个人的智商不是太低，至少不是那种不可理喻的脑残。
 
 -----
