--- a/text/收藏1.md
+++ b/text/收藏1.md
@@ -1,4 +1,13 @@
 
+你对 roguelike 游戏的设计有什么见解？ - 杨个毛的回答 <br>
+https://www.zhihu.com/question/514156185/answer/125252110465
+
+我现在看来 roguelike 历史悠久，且自娱自乐的成分浓厚，很可能它所体现出的设计理念就是 “没什么理念”，或者说的好听一点，就是 “以制作单机版 D&D 为起点，在开发的过程中逐渐发现自己的理念”……
+引入随机地图生成器不是由于某种随机理念的坚持，而是因为 TRPG 本来就可以是随机的，或者至少是即兴发挥的。
+存在 build 不是因为作者设计出了 build，而是因为你只要往一个 rpg 里丢足够多的要素，自然会出现 build 这个东西。
+我比较喜欢的 dungeon crawl stone soup 算是在保持原教旨程度极高的情况下，提炼出了一套比较现代的哲学：强调随机应变，强调细致的战术，强调角色成长的自由度，鼓励绕开打不过的障碍，把一大半的游戏内容放到通关主线之外以使得通关不那么依赖于运气，不鼓励机械无意义的操作，不鼓励任何形式的 “刷”。
+
+------
 大力出奇迹，未优化代码直接跑三天三夜 <br>
 https://www.zhihu.com/pin/1901660636167005467
 
