--- a/text/挑战.md
+++ b/text/挑战.md
@@ -2,6 +2,11 @@
 
 最新 5.12：
 
+睡醒后打算去路边摊吃烧烤，路上看到一家店起的名字引起了我的注意，这也太傻了吧。先去蜜雪冰城买了杯原味奶茶，6元，没毛病，路边摊是3元。然后去吃烧烤，点的有点多，问了下多少钱，说还没算，等炸好了之后再算。好了之后告诉我39元，有一个腊肠小串，我问了下是不是比较贵，说是10元一串，里面有10小串，虽然量有点少，但好像这种小串都是卖10块，也没什么问题，然后我也没接着问了。吃的时候没记录，现在回忆一下，剩下的是4素+4荤，年糕+白菜+蘑菇+金针菇，鸡排+大肠串+2个普通肉串，如果是3*4+4*4好像也没什么问题，如果是1*2+2*2+3*2+4*2=20好像就贵了点。之前我去一家炸串店吃，一次12，一次18含饮料，可能点的没那么多，但我觉得好便宜啊。
+
+总结：这不是钱的问题，而是情绪的问题。总之这一顿45元吃的还不如12元一顿的1荤2素快餐吃的舒服，虽然那家店味道很平淡我基本不去。
+
+-------
 “　　他双眉浓而长，充满粗犷的男性魅力，但那双清澈的眼睛，却又是那么秀逸，他鼻子挺直，象征着坚强、决断的铁石心肠，他那薄薄的、嘴角上翘的嘴，看来也有些冷酷，但只要他一笑起来，坚强就变作温柔，冷酷也变作同情，就像是温暖的春风，吹过了大地。<br>
 　　他抬手挡住刺眼的阳光，眨着眼睛笑了，目中闪动着顽皮、幽默的光芒，却又充满了机智。”
 
