--- a/text/看书.md
+++ b/text/看书.md
@@ -1,4 +1,17 @@
 
+转眼过了一日，[甲侧：必云转眼过了一日者，是反衬红玉挨一刻似一夏也，知乎？]原来次日就是王子腾夫人的寿诞，那里原打发人来请贾母王夫人的，王夫人见贾母不自在，也便不去了。[甲侧：所谓一笔两用也！]倒是薛姨妈同凤姐儿并贾家几个姊妹、宝钗、宝玉一齐都去了，至晚方回。
+
+可巧王夫人见贾环下了学，便命他来抄个《金刚咒》[甲侧：用《金刚咒》引五鬼法。]唪诵唪诵。那贾环正在王夫人炕上坐着，命人点灯，拿腔作势的抄写。[甲侧：小人乍得意者齐来一玩。]一时又叫彩云倒杯茶来，一时又叫玉钏儿来剪剪蜡花，一时又说金钏儿挡了灯影。众丫鬟们素日厌恶他，都不答理。只有彩霞还和他合的来，[甲侧：暗中又伏一风月之隙。]倒了一钟茶来递与他。因见王夫人和人说话儿，他便悄悄的向贾环说道：“你安些分罢，何苦讨这个厌那个厌的。”贾环道：“我也知道了，你别哄我。如今你和宝玉好，把我不答理，我也看出来了。”彩霞咬着嘴唇，向贾环头上戳了一指头，说道：“没良心的！狗咬吕洞宾，不识好人心。”[甲双：风月之情，皆系彼此业障所牵。虽云“惺惺惜惺惺”，但亦从业障而来。蠢妇配才郎，世间固不少，然俏女慕村夫者尤多，所谓业障牵魔，不在才貌之论。][庚辰眉批：此等世俗之言，亦因人而用，妥极当极！壬午孟夏，雨窗。畸笏。]
+
+两人正说着，只见凤姐来了，拜见过王夫人。王夫人便一长一短的问他，今儿是那几位堂客，戏文好歹，酒席如何等语。说了不多几句话，宝玉也来了，进门见了王夫人，不过规规矩矩说了几句，[甲侧：是大家子弟模样。]便命人除去抹额，脱了袍服，拉了靴子，便一头滚在王夫人怀里。[甲侧：余几几失声哭出。]王夫人便用手满身满脸摩挲抚弄他，[甲侧：普天下幼年丧母者齐来一哭。]宝玉也搬着王夫人的脖子说长道短的。[甲侧：慈母娇儿写尽矣。]王夫人道：“我的儿，你又吃多了酒，脸上滚热。你还只是揉搓，一会闹上酒来。还不在那里静静的倒一会子呢。”说着，便叫人拿个枕头来。宝玉听说便下来，在王夫人身后倒下，又叫彩霞来替他拍着。宝玉便和彩霞说笑，只见彩霞淡淡的，不大答理，两眼睛只向贾环处看。宝玉便拉他的手笑道：“好姐姐，你也理我理儿呢。”一面说，一面拉他的手，彩霞夺了手道：“再闹我就嚷了。”
+
+二人正闹着，原来贾环听的见，素日原恨宝玉，如今又见他和彩霞闹，心中越发按不下这口毒气。虽不敢明言，却每每暗中算计，[甲侧：已伏金钏回矣。]只是不得下手，今见相离甚近，便要用热油烫瞎他的眼睛。因而故意装作失手，把那盏油汪汪的蜡灯向宝玉脸上只一推。只听宝玉“嗳哟”了一声，满屋里众人都唬了一跳。连忙将地下的戳灯挪过来，又将里外间屋的灯拿了三四盏看时，只见宝玉满脸满头都是油。王夫人又急又气，一面命人来替宝玉擦洗，一面又骂贾环。凤姐三步两步的上炕去替宝玉收拾着，[甲侧：阿凤活现纸上。]一面笑道：“老三还是这么慌脚鸡似的，我说你上不得高抬板。赵姨娘时常也该教导教导他。”[庚侧：为下文紧一步。]一句话提醒了王夫人，那王夫人不骂贾环，便叫过赵姨娘来骂道：“养出这样黑心不知道理下流种子来，也不管管！几番几次我都不理论，[甲侧：补出素日来。]你们得了意了，越发上来了！”
+
+那赵姨娘素日虽然常怀嫉妒之心，不忿凤姐宝玉两个，也不敢露出来；如今贾环又生了事，受这场恶气，不但吞声承受，而且还要走去替宝玉收拾。只见宝玉左边脸上烫了一溜燎泡出来，幸而眼睛竟没动。王夫人看了，又是心疼，又怕明日贾母问怎么回答，急的又把赵姨娘数落一顿。[甲侧：总是为楔紧“五鬼”一回文字。]然后又安慰了宝玉一回，又命取败毒消肿药来敷上。宝玉道：“有些疼，还不妨事。明儿老太太问，就说是我自己烫的罢了。”凤姐笑道[戚双：两笑坏极。庚辰眉批：为五鬼法作耳，非泛文也。雨窗。]：“便说是自己烫的，[甲侧：玉兄自是悌弟之心性，一叹。]也要骂人为什么不小心看着，叫你烫了！横竖有一场气生的，到明儿凭你怎么说去罢。”[甲侧：坏极！总是调唆口吻，赵氏宁不觉乎？]王夫人命人好生送了宝玉回房去后，袭人等见了，都慌的了不得。
+
+林黛玉见宝玉出了一天门，就觉闷闷的，没个可说话的人。至晚正打发人来问了两三遍回来不曾，这遍方才回来，又偏生烫了。林黛玉便赶着来瞧，只见宝玉正拿镜子照呢，左边脸上满满的敷了一脸的药。林黛玉只当烫的十分利害，忙上来问怎么烫了，要瞧瞧。宝玉见他来了，忙把脸遮着，摇手叫他出去，不肯叫他看──知道他的癖性喜洁，见不得这些东西。[甲双：写宝玉文字，此等方是正紧笔墨。]林黛玉自己也知道自己也有这件癖性，[甲双：写林黛玉文字，此等方是正经笔墨。故二人文字虽多，如此等暗伏淡写处亦不少，观者实实看不出者。]知道宝玉的心内怕他嫌脏，[甲侧：二人纯用体贴功夫。][甲双：将二人一并，真真写他二人之心玲珑七窍。]因笑道：“我瞧瞧，烫了那里了，有什么遮着藏着的。”一面说，一面就凑上来，强搬着脖子瞧了一瞧，问他：“疼的怎么样？”宝玉道：“也不狠疼，养一两日就好了。”林黛玉坐了一会，闷闷的回房去了。一宿无话。
+
+-------
 　　现在，他舒适地伏在甲板上，让五月温暖的阳光，晒着他宽阔的、赤裸着的、古铜色的背。 <br>
 　　海风温暖而潮湿，从船舷穿过，吹起了他漆黑的头发，坚实的手臂伸在前面，修长而有力的手指，握着的是个晶莹而滑润的白玉美人。 <br>
 　　他却似已在海洋的怀抱里入睡。 <br>
