--- a/text/看书.md
+++ b/text/看书.md
@@ -3,7 +3,7 @@
 
 可巧王夫人见贾环下了学，便命他来抄个《金刚咒》唪诵。[甲侧：用《金刚咒》引五鬼法。]那贾环正在王夫人炕上坐着，命人点灯，拿腔作势的抄写。[甲侧：小人乍得意者齐来一玩。]一时叫彩云倒杯茶来，一时又叫玉钏儿来剪剪蜡花，一时又说金钏儿挡了灯影。众丫鬟们素日厌恶他，都不答理。只有彩霞还和他合的来，[甲侧：暗中又伏一风月之隙。]倒了一钟茶来递与他。见王夫人和人说话儿，他便悄悄的向贾环说道：“你安些分罢，何苦讨这个厌那个厌的。”贾环道：“我也知道了，你别哄我。如今你和宝玉好，把我不答理，我也看出来了。”彩霞咬着嘴唇，向贾环头上戳了一指头，说道：“没良心的！狗咬吕洞宾，不识好人心。”[甲双：风月之情，皆系彼此业障所牵。虽云“惺惺惜惺惺”，但亦从业障而来。蠢妇配才郎，世间固不少，然俏女慕村夫者尤多，所谓业障牵魔，不在才貌之论。][庚辰眉批：此等世俗之言，亦因人而用，妥极当极！壬午孟夏，雨窗。畸笏。]
 
-两人正说着，只见凤姐来了，拜见过王夫人。王夫人便一长一短的问他，今儿是那几位堂客，戏文好歹，酒席如何等语。说了不多几句话，宝玉也来了，进门见了王夫人，不过规规矩矩说了几句，[甲侧：是大家子弟模样。]便命人除去抹额，脱了袍服，拉了靴子，便一头滚在王夫人怀里。[甲侧：余几几失声哭出。]王夫人便用手满身满脸摩挲抚弄他，[甲侧：普天下幼年丧母者齐来一哭。]宝玉也搬着王夫人的脖子说长说短的。[甲侧：慈母娇儿写尽矣。]王夫人道：“我的儿，你又吃多了酒，脸上滚热。你还只是揉搓，一会闹上酒来。还不在那里静静的倒一会子呢。”说着，便叫人拿个枕头来。宝玉听说便下来，在王夫人身后倒下，又叫彩霞来替他拍着。宝玉便和彩霞说笑，只见彩霞淡淡的，不大答理，两眼睛只向贾环处看。宝玉便拉他的手笑道：“好姐姐，你也理我理儿呢。”一面说，一面拉他的手，彩霞夺了手道：“再闹我就嚷了。”
+两人正说着，只见凤姐来了，拜见过王夫人。王夫人便一长一短的问他，今儿是那几位堂客，戏文好歹，酒席如何等语。说了不多几句话，宝玉也来了，进门见了王夫人，不过规规矩矩说了几句，[甲侧：是大家子弟模样。]便命人除去抹额，脱了袍服，拉了靴子，便一头滚在王夫人怀里。[甲侧：余几几失声哭出。]王夫人便用手满身满脸摩挲抚弄他，[甲侧：普天下幼年丧母者齐来一哭。]宝玉也搬着王夫人的脖子说长说短的。[甲侧：慈母娇儿写尽矣。]王夫人道：“我的儿，你又吃多了酒，脸上滚热。你还只是揉搓，一会闹上酒来。还不在那里静静的倒一会子呢。”说着，便叫人拿个枕头来。宝玉听说便下来，在王夫人身后倒下，又叫彩霞来替他拍着。宝玉便和彩霞说笑，只见彩霞淡淡的，不大答理，两眼睛只向贾环处看。宝玉便拉他的手笑道：“好姐姐，你也理我一理儿呢。”一面说，一面拉他的手，彩霞夺了手道：“再闹我就嚷了。”
 
 二人正说着，原来贾环都听见了，素日原恨宝玉，如今又见他和彩霞厮闹，心中越发按不下这口毒气。虽不敢明言，却每每暗中算计，[甲侧：已伏金钏回矣。][甲眉：环儿种种行为，毫无大家规范，实实可恨之至。]只是不得下手，今见相离甚近，便要用热油烫瞎他的眼睛。因而故意装作失手，把那盏油汪汪的蜡灯向宝玉脸上只一推。只听宝玉“嗳哟”了一声，满屋里众人都唬了一跳。连忙将地下的戳灯挪过来，又将里外间屋的灯拿了三四盏看时，只见宝玉满脸满头都是蜡油。王夫人又急又气，一面命人来替宝玉擦洗，一面又骂贾环。凤姐三步两步跑上炕去，[甲侧：阿凤活现纸上。]给宝玉收拾着，一面笑道：“老三还是这么慌脚鸡似的，我说你上不得高抬板。赵姨娘时常也该教导教导他。”[庚侧：为下文紧一步。]一句话提醒了王夫人，那王夫人不骂贾环，便叫过赵姨娘来骂道：“养出这样黑心不知道理下流种子来，也不管管！几番几次我都不理论，[甲侧：补出素日来。]你们得了意了，这不亦发上来了！”
 
