--- a/text/看书.md
+++ b/text/看书.md
@@ -9,7 +9,7 @@
 
 那赵姨娘素日虽然常怀嫉妒之心，不忿凤姐宝玉两个，也不敢露出来；如今贾环又生了事，受这场恶气，不但吞声承受，而且还要走去替宝玉收拾。只见宝玉左边脸上烫了一溜燎泡出来，幸而眼睛竟没动。王夫人看了，又是心疼，又怕明日贾母问怎么回答，急的又把赵姨娘数落一顿。[甲侧：总是为楔紧“五鬼”一回文字。]然后又安慰了宝玉一回，又命取败毒消肿药来敷上。宝玉道：“有些疼，还不妨事。明儿老太太问，就说是我自己烫的罢了。”凤姐笑道[戚双：两笑坏极。庚辰眉批：为五鬼法作耳，非泛文也。雨窗。]：“便说是自己烫的，[甲侧：玉兄自是悌弟之心性，一叹。]也要骂人为什么不小心看着，叫你烫了！横竖有一场气生的，到明儿凭你怎么说去罢。”[甲侧：坏极！总是调唆口吻，赵氏宁不觉乎？]王夫人命人好生送了宝玉回房去后，袭人等见了，都慌的了不得。
 
-林黛玉见宝玉出了一天门，就觉闷闷的，没个可说话的人。至晚正打发人来问了两三遍回来不曾，这遍方才回来，又偏生烫了。林黛玉便赶着来瞧，只见宝玉正拿镜子照呢，左边脸上满满的敷了一脸的药。林黛玉只当烫的十分利害，忙上来问怎么烫了，要瞧瞧。宝玉见他来了，忙把脸遮着，摇手叫他出去，不肯叫他看──知道他的癖性喜洁，见不得这些东西。[甲双：写宝玉文字，此等方是正紧笔墨。]林黛玉自己也知道自己也有这件癖性，[甲双：写林黛玉文字，此等方是正经笔墨。故二人文字虽多，如此等暗伏淡写处亦不少，观者实实看不出者。]知道宝玉的心内怕他嫌脏，[甲侧：二人纯用体贴功夫。][甲双：将二人一并，真真写他二人之心玲珑七窍。]因笑道：“我瞧瞧，烫了那里了，有什么遮着藏着的。”一面说，一面就凑上来，强搬着脖子瞧了一瞧，问他：“疼的怎么样？”宝玉道：“也不狠疼，养一两日就好了。”林黛玉坐了一会，闷闷的回房去了。一宿无话。
+林黛玉见宝玉出了一天门，就觉闷闷的，没个可说话的人。至晚正打发人来问了两三遍回来不曾，这遍方才回来，又偏生烫了。林黛玉便赶着来瞧，只见宝玉正拿镜子照呢，左边脸上满满的敷了一脸的药。林黛玉只当烫的十分利害，忙上来问怎么烫了，要瞧瞧。宝玉见他来了，忙把脸遮着，摇手叫他出去，不肯叫他看──知道他的癖性喜洁，见不得这些东西。[甲双：写宝玉文字，此等方是正紧笔墨。]林黛玉自己也知道自己也有这件癖性，[甲双：写林黛玉文字，此等方是正经笔墨。故二人文字虽多，如此等暗伏淡写处亦不可少，观者实实看不出。]知道宝玉的心内怕他嫌贜，[甲侧：二人纯用体贴功夫。][甲双：将二人一并，真真写他二人之心，玲珑七窍。]因笑道：“我瞧瞧，烫了那里了？有什么遮着藏着的。”一面说，一面就凑上来，强搬着脖子瞧了一瞧，问他：“疼的怎么样？”宝玉道：“也不狠疼，养一两日就好了。”林黛玉坐了一会，闷闷的回房去了。一宿无话。
 
 -------
 　　现在，他舒适地伏在甲板上，让五月温暖的阳光，晒着他宽阔的、赤裸着的、古铜色的背。 <br>
