--- a/text/收藏1.md
+++ b/text/收藏1.md
@@ -1,4 +1,9 @@
+淘宝推出「高退款人群屏蔽功能」，仅对服饰行业商家开放，会影响用户正常退换货吗？怎么算是高退款？ <br>
+https://www.zhihu.com/question/1905672699918901514
 
+对这一新功能，有网友表示该功能对商家友好，可以明显提高淘宝商家的人群推广质量和成交率。还有网友喊话淘宝给消费者也设置一个屏蔽高退货率商家功能，这样就不用自己花时间一个个筛选。
+
+------
 你对 roguelike 游戏的设计有什么见解？ - 杨个毛的回答 <br>
 https://www.zhihu.com/question/514156185/answer/125252110465
 
