--- a/text/挑战.md
+++ b/text/挑战.md
@@ -1,7 +1,12 @@
 2025年挑战：逃避没用，不把最硬的骨头给啃下来，不可能研究出什么实质性的突破。
 
-最新 5.13：
+最新 5.14：
 
+我幻想中理想的互联网是这样的，发布信息自由，但是筛选信息也是自由的，就是筛选算法是可以随便切换的，你可以给你的客户端写算法，也可以用别人的开源算法，甚至有些好算法也可以不开源。
+
+有个问题，如果读者筛选的算法太刁钻，信息发布不出去怎么办？
+
+------
 为什么红楼梦网上的版本和我买的书上有很多地方不一样？
 
 ------
