--- a/text/收藏1.md
+++ b/text/收藏1.md
@@ -3,6 +3,8 @@ https://www.zhihu.com/question/1905672699918901514
 
 对这一新功能，有网友表示该功能对商家友好，可以明显提高淘宝商家的人群推广质量和成交率。还有网友喊话淘宝给消费者也设置一个屏蔽高退货率商家功能，这样就不用自己花时间一个个筛选。
 
+单向筛选会导致无良商家和那种忍气吞声的好买家交易增多。
+
 ------
 你对 roguelike 游戏的设计有什么见解？ - 杨个毛的回答 <br>
 https://www.zhihu.com/question/514156185/answer/125252110465
