--- a/text/挑战.md
+++ b/text/挑战.md
@@ -9,12 +9,12 @@ https://www.zhihu.com/question/1905672699918901514/answer/1905824156517377253
 
 竹砚：不是屏蔽平均数，在分布验证里，我们认为3个偏离度之内的情况都是“正常”的，超出3个偏离度的情况存在异常，即我们认为这5%的用户行为不符合正常用户的指标，是用户个人原因导致的退款率高，所以屏蔽的是这5%的异常用户，你一般用户多退少退根本超不出我们定义的正常区间
 
-这种概率算法的细节我懒得纠结，我只从宏观角度考虑，就是你概率算出来的一个正常范围内的数值，会不会由于在算法控制下的买家用户过度内卷改变了用户的平均画像，从而导致了原本正常的情况变成了异常情况。
+这种概率算法的细节我懒得纠结，我只从宏观角度考虑，就是你概率算出来的一个正常范围内的数值，会不会由于在算法控制下的买家用户过度内卷改变了用户的平均画像，从而导致了原本正常的情况变为了异常情况。
 
 ------
 我幻想中理想的互联网是这样的，发布信息自由，但是筛选信息也是自由的，就是筛选算法是可以随便切换的，你可以给你的客户端写算法，也可以用别人的开源算法，甚至有些好算法也可以不开源。
 
-有个问题，如果读者筛选的算法太刁钻，信息发布不出去怎么办？
+有个问题，万一读者筛选的算法太刁钻，信息发布不出去怎么办？
 
 ------
 为什么红楼梦网上的版本和我买的书上有很多地方不一样？
