--- a/text/挑战.md
+++ b/text/挑战.md
@@ -2,6 +2,46 @@
 
 最新 5.14：
 
+周蕙 - 约定
+
+作词: 姚若龙 <br>
+作曲: 陈小霞 <br>
+编曲: 陈飞午 <br>
+
+远处的钟声回荡在雨里 <br>
+我们在屋檐底下牵手听 <br>
+幻想教堂里头那场婚礼 <br>
+是为祝福我俩而举行 <br>
+一路从泥泞走到了美景 <br>
+习惯在彼此眼中找勇气 <br>
+累到无力总会想吻你 <br>
+才能忘了情路艰辛 <br>
+
+你我约定难过的往事不许提 <br>
+也答应永远都不让对方担心 <br>
+要做快乐的自己 照顾自己 <br>
+就算某天一个人孤寂 <br>
+你我约定一争吵很快要喊停 <br>
+也说好没有秘密彼此很透明 <br>
+我会好好地爱你 傻傻爱你 <br>
+不去计较公平不公平
+
+一路从泥泞走到了美景
+习惯在彼此眼中找勇气
+累到无力总会想吻你
+才能忘了情路艰辛
+你我约定难过的往事不许提
+也答应永远都不让对方担心
+要做快乐的自己 照顾自己
+就算某天一个人孤寂
+你我约定一争吵很快要喊停
+也说好没有秘密彼此很透明
+我会好好地爱你 傻傻爱你
+不去计较公平不公平
+我会好好地爱你 傻傻爱你
+不去计较公平不公平
+
+------
 淘宝推出「高退款人群屏蔽功能」，仅对服饰行业商家开放，会影响用户正常退换货吗？怎么算是高退款？ - 霜心的回答 <br>
 https://www.zhihu.com/question/1905672699918901514/answer/1905824156517377253
 
